--- a/docs/visual-basic/misc/bc30625.md
+++ b/docs/visual-basic/misc/bc30625.md
@@ -1,5 +1,5 @@
 ---
-title: '&#39;모듈&#39; 문은 짝이 되는 끝나야 &#39;끝 모듈&#39;'
+title: '&#39;모듈&#39; 문은 일치 하는 끝나야 합니다. &#39;End&#39;'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30625
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30625
 ms.assetid: d51d5f1c-16f5-401c-be3a-0470eb9bb812
-ms.openlocfilehash: b592b34ee7da4c04fcaacc7e9e5df582fd36bb52
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 91b2582a0f5d724d2c5a43960473b3cf9a3b18db
+ms.sourcegitcommit: e614e0f3b031293e4107f37f752be43652f3f253
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33616774"
+ms.lasthandoff: 08/27/2018
+ms.locfileid: "43003140"
 ---
-# <a name="39module39-statement-must-end-with-a-matching-39end-module39"></a><span data-ttu-id="c2d6f-102">&#39;모듈&#39; 문은 짝이 되는 끝나야 &#39;끝 모듈&#39;</span><span class="sxs-lookup"><span data-stu-id="c2d6f-102">&#39;Module&#39; statement must end with a matching &#39;End Module&#39;</span></span>
-<span data-ttu-id="c2d6f-103">모듈 블록은 `End``Module` 문으로 끝나야 합니다.</span><span class="sxs-lookup"><span data-stu-id="c2d6f-103">Module blocks must end with an `End``Module` statement.</span></span>  
+# <a name="39module39-statement-must-end-with-a-matching-39end-module39"></a><span data-ttu-id="d0712-102">&#39;모듈&#39; 문은 일치 하는 끝나야 합니다. &#39;End&#39;</span><span class="sxs-lookup"><span data-stu-id="d0712-102">&#39;Module&#39; statement must end with a matching &#39;End Module&#39;</span></span>
+<span data-ttu-id="d0712-103">모듈 블록 끝나야는 `End Module` 문입니다.</span><span class="sxs-lookup"><span data-stu-id="d0712-103">Module blocks must end with an `End Module` statement.</span></span>  
   
- <span data-ttu-id="c2d6f-104">**오류 ID:** BC30625</span><span class="sxs-lookup"><span data-stu-id="c2d6f-104">**Error ID:** BC30625</span></span>  
+ <span data-ttu-id="d0712-104">**오류 ID:** BC30625</span><span class="sxs-lookup"><span data-stu-id="d0712-104">**Error ID:** BC30625</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c2d6f-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="c2d6f-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d0712-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d0712-105">To correct this error</span></span>  
   
--   <span data-ttu-id="c2d6f-106">`End Module` 블록 끝에 `Module` 문을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="c2d6f-106">Add an `End Module` statement to the end of the `Module` block.</span></span>  
+-   <span data-ttu-id="d0712-106">`End Module` 블록 끝에 `Module` 문을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="d0712-106">Add an `End Module` statement to the end of the `Module` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c2d6f-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="c2d6f-107">See Also</span></span>  
- [<span data-ttu-id="c2d6f-108">최종 \<키워드 > 문</span><span class="sxs-lookup"><span data-stu-id="c2d6f-108">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+## <a name="see-also"></a><span data-ttu-id="d0712-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="d0712-107">See Also</span></span>  
+ [<span data-ttu-id="d0712-108">최종 \<키워드 > 문</span><span class="sxs-lookup"><span data-stu-id="d0712-108">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
