--- a/docs/visual-basic/misc/bc30656.md
+++ b/docs/visual-basic/misc/bc30656.md
@@ -1,5 +1,5 @@
 ---
-title: 필드 &#39; &lt;fieldname&gt; &#39; 은 지원 되지 않는 형식
+title: 필드 &#39; &lt;fieldname&gt; &#39; 는 지원 되지 않는 형식입니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30656
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30656
 ms.assetid: 3c806df2-19f7-4f54-a72a-4043d2cdba9f
-ms.openlocfilehash: f26310f46cbf6c972b25d53626aaba1820f80b98
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: efc5f64c9e6214960ec49a1d9f3f02ccb0f35668
+ms.sourcegitcommit: e614e0f3b031293e4107f37f752be43652f3f253
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33612234"
+ms.lasthandoff: 08/27/2018
+ms.locfileid: "42999072"
 ---
-# <a name="field-39ltfieldnamegt39-is-of-an-unsupported-type"></a><span data-ttu-id="53a4b-102">필드 &#39; &lt;fieldname&gt; &#39; 은 지원 되지 않는 형식</span><span class="sxs-lookup"><span data-stu-id="53a4b-102">Field &#39;&lt;fieldname&gt;&#39; is of an unsupported type</span></span>
-<span data-ttu-id="53a4b-103">필드는 Visual Studio에서 표현할 수 없는 형식으로 선언 됩니다.</span><span class="sxs-lookup"><span data-stu-id="53a4b-103">A field is declared as a type that cannot be represented by Visual Studio.</span></span>  
+# <a name="field-39ltfieldnamegt39-is-of-an-unsupported-type"></a><span data-ttu-id="25695-102">필드 &#39; &lt;fieldname&gt; &#39; 는 지원 되지 않는 형식입니다.</span><span class="sxs-lookup"><span data-stu-id="25695-102">Field &#39;&lt;fieldname&gt;&#39; is of an unsupported type</span></span>
+<span data-ttu-id="25695-103">필드는 Visual Studio에서 표현할 수 없는 형식으로 선언 됩니다.</span><span class="sxs-lookup"><span data-stu-id="25695-103">A field is declared as a type that cannot be represented by Visual Studio.</span></span>  
   
- <span data-ttu-id="53a4b-104">**오류 ID:** BC30656</span><span class="sxs-lookup"><span data-stu-id="53a4b-104">**Error ID:** BC30656</span></span>  
+ <span data-ttu-id="25695-104">**오류 ID:** BC30656</span><span class="sxs-lookup"><span data-stu-id="25695-104">**Error ID:** BC30656</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="53a4b-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="53a4b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="25695-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="25695-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="53a4b-106">필드를 지원되는 형식으로 정의합니다.</span><span class="sxs-lookup"><span data-stu-id="53a4b-106">Define the field as a supported type.</span></span>  
+1.  <span data-ttu-id="25695-106">필드를 지원되는 형식으로 정의합니다.</span><span class="sxs-lookup"><span data-stu-id="25695-106">Define the field as a supported type.</span></span>  
   
-2.  <span data-ttu-id="53a4b-107">필드의 데이터를 설명하는 새 형식을 개발합니다.</span><span class="sxs-lookup"><span data-stu-id="53a4b-107">Develop a new type that describes the data in the field.</span></span>  
+2.  <span data-ttu-id="25695-107">필드의 데이터를 설명하는 새 형식을 개발합니다.</span><span class="sxs-lookup"><span data-stu-id="25695-107">Develop a new type that describes the data in the field.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="53a4b-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="53a4b-108">See Also</span></span>  
- [<span data-ttu-id="53a4b-109">데이터 형식</span><span class="sxs-lookup"><span data-stu-id="53a4b-109">Data Types</span></span>](../../visual-basic/language-reference/data-types/data-type-summary.md)
+## <a name="see-also"></a><span data-ttu-id="25695-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="25695-108">See Also</span></span>  
+ [<span data-ttu-id="25695-109">데이터 형식</span><span class="sxs-lookup"><span data-stu-id="25695-109">Data Types</span></span>](../../visual-basic/language-reference/data-types/index.md)
