--- a/docs/visual-basic/misc/bc42300.md
+++ b/docs/visual-basic/misc/bc42300.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC42300
 ms.assetid: f9f7d1da-a723-4237-bd78-6db7ed8bc4aa
-ms.openlocfilehash: 5e7b747b46476fb134d1166d66722d66211ada33
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 4988fda485e0b37efef8598a5a9b9efaf9e380b1
+ms.sourcegitcommit: e614e0f3b031293e4107f37f752be43652f3f253
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33633577"
+ms.lasthandoff: 08/27/2018
+ms.locfileid: "42999447"
 ---
-# <a name="xml-comment-block-must-immediately-precede-the-language-element-to-which-it-applies"></a><span data-ttu-id="824a7-102">XML 주석 블록은 이 주석 블록이 적용되는 언어 요소의 바로 앞에 와야 함</span><span class="sxs-lookup"><span data-stu-id="824a7-102">XML comment block must immediately precede the language element to which it applies</span></span>
-<span data-ttu-id="824a7-103">XML 주석 블록은 이 주석 블록이 적용되는 언어 요소의 바로 앞에 와야 합니다.</span><span class="sxs-lookup"><span data-stu-id="824a7-103">XML comment block must immediately precede the language element to which it applies.</span></span> <span data-ttu-id="824a7-104">XML 주석이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="824a7-104">XML comment will be ignored.</span></span>  
+# <a name="xml-comment-block-must-immediately-precede-the-language-element-to-which-it-applies"></a><span data-ttu-id="5ae5e-102">XML 주석 블록은 이 주석 블록이 적용되는 언어 요소의 바로 앞에 와야 함</span><span class="sxs-lookup"><span data-stu-id="5ae5e-102">XML comment block must immediately precede the language element to which it applies</span></span>
+<span data-ttu-id="5ae5e-103">XML 주석 블록은 이 주석 블록이 적용되는 언어 요소의 바로 앞에 와야 합니다.</span><span class="sxs-lookup"><span data-stu-id="5ae5e-103">XML comment block must immediately precede the language element to which it applies.</span></span> <span data-ttu-id="5ae5e-104">XML 주석이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="5ae5e-104">XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="824a7-105">이 오류는 태그가 잘못 배치되었거나 형식이 잘못된 경우에도 발생할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="824a7-105">This error will also occur if a tag is misplaced or otherwise malformed.</span></span>  
+ <span data-ttu-id="5ae5e-105">이 오류는 태그가 잘못 배치되었거나 형식이 잘못된 경우에도 발생할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="5ae5e-105">This error will also occur if a tag is misplaced or otherwise malformed.</span></span>  
   
- <span data-ttu-id="824a7-106">**오류 ID:** BC42300</span><span class="sxs-lookup"><span data-stu-id="824a7-106">**Error ID:** BC42300</span></span>  
+ <span data-ttu-id="5ae5e-106">**오류 ID:** BC42300</span><span class="sxs-lookup"><span data-stu-id="5ae5e-106">**Error ID:** BC42300</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="824a7-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="824a7-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5ae5e-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="5ae5e-107">To correct this error</span></span>  
   
-1.  <span data-ttu-id="824a7-108">주석 블록을 적용되는 언어 요소의 앞에 오도록 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="824a7-108">Move the comment block to precede the language element to which it applies.</span></span> <span data-ttu-id="824a7-109">관련 없는 문자가 초기 태그 앞에 잘못 삽입되지 않았는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="824a7-109">Make sure that extraneous characters have not been accidentally inserted before the initial tag.</span></span>  
+1.  <span data-ttu-id="5ae5e-108">주석 블록을 적용되는 언어 요소의 앞에 오도록 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="5ae5e-108">Move the comment block to precede the language element to which it applies.</span></span> <span data-ttu-id="5ae5e-109">관련 없는 문자가 초기 태그 앞에 잘못 삽입되지 않았는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="5ae5e-109">Make sure that extraneous characters have not been accidentally inserted before the initial tag.</span></span>  
   
-2.  <span data-ttu-id="824a7-110">태그가 유효한지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="824a7-110">Make sure the tag is valid.</span></span>  
+2.  <span data-ttu-id="5ae5e-110">태그가 유효한지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="5ae5e-110">Make sure the tag is valid.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="824a7-111">참고 항목</span><span class="sxs-lookup"><span data-stu-id="824a7-111">See Also</span></span>  
- [<span data-ttu-id="824a7-112">방법: XML 문서 만들기</span><span class="sxs-lookup"><span data-stu-id="824a7-112">How to: Create XML Documentation</span></span>](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)  
- [<span data-ttu-id="824a7-113">XML 주석 태그</span><span class="sxs-lookup"><span data-stu-id="824a7-113">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/recommended-xml-tags-for-documentation-comments.md)
+## <a name="see-also"></a><span data-ttu-id="5ae5e-111">참고 항목</span><span class="sxs-lookup"><span data-stu-id="5ae5e-111">See Also</span></span>  
+ [<span data-ttu-id="5ae5e-112">방법: XML 문서 만들기</span><span class="sxs-lookup"><span data-stu-id="5ae5e-112">How to: Create XML Documentation</span></span>](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)  
+ [<span data-ttu-id="5ae5e-113">XML 주석 태그</span><span class="sxs-lookup"><span data-stu-id="5ae5e-113">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)
