--- a/docs/visual-basic/misc/bc42302.md
+++ b/docs/visual-basic/misc/bc42302.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC42302
 ms.assetid: c3344328-adef-4c3d-b75e-e8a9e450e67c
-ms.openlocfilehash: 15371d3bca436ad4dfe8b9975f1c479a4af28385
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 9d7e48d00238d5e9e3bd9ac376bf2c259bca6321
+ms.sourcegitcommit: e614e0f3b031293e4107f37f752be43652f3f253
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33634809"
+ms.lasthandoff: 08/27/2018
+ms.locfileid: "42998400"
 ---
-# <a name="xml-comment-must-be-the-first-statement-on-a-line"></a><span data-ttu-id="53fa1-102">XML 주석은 줄의 첫째 문이어야 함</span><span class="sxs-lookup"><span data-stu-id="53fa1-102">XML comment must be the first statement on a line</span></span>
-<span data-ttu-id="53fa1-103">XML 주석은 줄의 첫째 문이어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="53fa1-103">XML comment must be the first statement on a line.</span></span> <span data-ttu-id="53fa1-104">XML 주석이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="53fa1-104">XML comment will be ignored.</span></span>  
+# <a name="xml-comment-must-be-the-first-statement-on-a-line"></a><span data-ttu-id="9ce42-102">XML 주석은 줄의 첫째 문이어야 함</span><span class="sxs-lookup"><span data-stu-id="9ce42-102">XML comment must be the first statement on a line</span></span>
+<span data-ttu-id="9ce42-103">XML 주석은 줄의 첫째 문이어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="9ce42-103">XML comment must be the first statement on a line.</span></span> <span data-ttu-id="9ce42-104">XML 주석이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="9ce42-104">XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="53fa1-105">XML 주석이 다른 언어 요소 뒤에 있는데 이는 허용되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="53fa1-105">An XML comment was placed after another language element, which is not allowed.</span></span>  
+ <span data-ttu-id="9ce42-105">XML 주석이 다른 언어 요소 뒤에 있는데 이는 허용되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="9ce42-105">An XML comment was placed after another language element, which is not allowed.</span></span>  
   
- <span data-ttu-id="53fa1-106">**오류 ID:** BC42302</span><span class="sxs-lookup"><span data-stu-id="53fa1-106">**Error ID:** BC42302</span></span>  
+ <span data-ttu-id="9ce42-106">**오류 ID:** BC42302</span><span class="sxs-lookup"><span data-stu-id="9ce42-106">**Error ID:** BC42302</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="53fa1-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="53fa1-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9ce42-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="9ce42-107">To correct this error</span></span>  
   
--   <span data-ttu-id="53fa1-108">XML 주석을 새 줄로 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="53fa1-108">Move the XML comment to a new line.</span></span>  
+-   <span data-ttu-id="9ce42-108">XML 주석을 새 줄로 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="9ce42-108">Move the XML comment to a new line.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="53fa1-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="53fa1-109">See Also</span></span>  
- [<span data-ttu-id="53fa1-110">XML 주석 태그</span><span class="sxs-lookup"><span data-stu-id="53fa1-110">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/recommended-xml-tags-for-documentation-comments.md)  
- [<span data-ttu-id="53fa1-111">코드를 XML로 문서화</span><span class="sxs-lookup"><span data-stu-id="53fa1-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+## <a name="see-also"></a><span data-ttu-id="9ce42-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="9ce42-109">See Also</span></span>  
+ [<span data-ttu-id="9ce42-110">XML 주석 태그</span><span class="sxs-lookup"><span data-stu-id="9ce42-110">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)  
+ [<span data-ttu-id="9ce42-111">코드를 XML로 문서화</span><span class="sxs-lookup"><span data-stu-id="9ce42-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
