--- a/docs/visual-basic/misc/bc30650.md
+++ b/docs/visual-basic/misc/bc30650.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30650
 ms.assetid: 566aa501-d283-4c1f-b494-3bc5fbe80e04
-ms.openlocfilehash: 489f7bad1ba9b2dad813e1451a8739d14a8e7963
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 8841c3b4c4910d4ad512a74bd409710a794a6850
+ms.sourcegitcommit: 875ecc3ab2437e299b1d50076bd9b878fa8c64de
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33616973"
+ms.lasthandoff: 08/29/2018
+ms.locfileid: "43238513"
 ---
-# <a name="enums-must-be-declared-as-an-integral-type"></a><span data-ttu-id="5d81f-102">열거형은 정수 형식으로 선언해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="5d81f-102">Enums must be declared as an integral type</span></span>
-<span data-ttu-id="5d81f-103">열거형에서 사용할 수 있는 올바른 유형은 `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`및 `ULong`뿐입니다.</span><span class="sxs-lookup"><span data-stu-id="5d81f-103">The only valid types you can use in enumerations are `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`, and `ULong`.</span></span> <span data-ttu-id="5d81f-104">다른 데이터 형식은 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="5d81f-104">No other data types can be used.</span></span>  
+# <a name="enums-must-be-declared-as-an-integral-type"></a><span data-ttu-id="e0953-102">열거형은 정수 형식으로 선언해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="e0953-102">Enums must be declared as an integral type</span></span>
+<span data-ttu-id="e0953-103">열거형에서 사용할 수 있는 올바른 유형은 `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`및 `ULong`뿐입니다.</span><span class="sxs-lookup"><span data-stu-id="e0953-103">The only valid types you can use in enumerations are `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`, and `ULong`.</span></span> <span data-ttu-id="e0953-104">다른 데이터 형식은 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="e0953-104">No other data types can be used.</span></span>  
   
- <span data-ttu-id="5d81f-105">**오류 ID:** BC30650</span><span class="sxs-lookup"><span data-stu-id="5d81f-105">**Error ID:** BC30650</span></span>  
+ <span data-ttu-id="e0953-105">**오류 ID:** BC30650</span><span class="sxs-lookup"><span data-stu-id="e0953-105">**Error ID:** BC30650</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5d81f-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="5d81f-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e0953-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="e0953-106">To correct this error</span></span>  
   
--   <span data-ttu-id="5d81f-107">`SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`또는 `ULong`데이터 형식을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="5d81f-107">Specify a data type of `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`, or `ULong`.</span></span>  
+-   <span data-ttu-id="e0953-107">`SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`또는 `ULong`데이터 형식을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="e0953-107">Specify a data type of `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`, or `ULong`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5d81f-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="5d81f-108">See Also</span></span>  
- [<span data-ttu-id="5d81f-109">데이터 형식</span><span class="sxs-lookup"><span data-stu-id="5d81f-109">Data Types</span></span>](../../visual-basic/language-reference/data-types/data-type-summary.md)  
- [<span data-ttu-id="5d81f-110">Enum 문</span><span class="sxs-lookup"><span data-stu-id="5d81f-110">Enum Statement</span></span>](../../visual-basic/language-reference/statements/enum-statement.md)
+## <a name="see-also"></a><span data-ttu-id="e0953-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="e0953-108">See Also</span></span>  
+ [<span data-ttu-id="e0953-109">데이터 형식</span><span class="sxs-lookup"><span data-stu-id="e0953-109">Data Types</span></span>](../../visual-basic/language-reference/data-types/index.md)  
+ [<span data-ttu-id="e0953-110">Enum 문</span><span class="sxs-lookup"><span data-stu-id="e0953-110">Enum Statement</span></span>](../../visual-basic/language-reference/statements/enum-statement.md)
