--- a/docs/visual-basic/misc/bc30657.md
+++ b/docs/visual-basic/misc/bc30657.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30657
 ms.assetid: dd28b718-6a88-444c-9844-672b93628c16
-ms.openlocfilehash: 4dcbd2eef3806150d53e8ac63de1e9a61fa3ec11
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 5048343adf527f3d3000935af4c245a09e6ed654
+ms.sourcegitcommit: fe02afbc39e78afd78cc6050e4a9c12a75f579f8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33612426"
+ms.lasthandoff: 08/30/2018
+ms.locfileid: "43253829"
 ---
 # <a name="39ltprocedurenamegt39-has-a-return-type-that-is-not-supported-or-parameter-types-that-are-not-supported"></a>&#39;&lt;procedurename&gt; &#39; 에 지원 되지 않는 반환 형식 또는 지원 되지 않는 매개 변수 형식
-프로시저가 매개 변수 또는 Visual Studio에서 표현할 수 없는 반환 형식으로 선언 되었습니다.  
+프로시저 매개 변수 또는 Visual Studio에서 표현할 수 없는 반환 형식으로 선언 됩니다.  
   
  **오류 ID:** BC30657  
   
@@ -26,4 +26,4 @@ ms.locfileid: "33612426"
 -   이 프로시저에서 사용되는 데이터를 설명하는 새 형식을 개발합니다.  
   
 ## <a name="see-also"></a>참고 항목  
- [데이터 형식](../../visual-basic/language-reference/data-types/data-type-summary.md)
+ [데이터 형식](../../visual-basic/language-reference/data-types/index.md)
