--- a/docs/csharp/language-reference/compiler-messages/cs0151.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0151.md
@@ -1,74 +1,75 @@
 ---
 title: 컴파일러 오류 CS0151
-ms.date: 07/20/2015
+ms.date: 08/14/2018
 f1_keywords:
 - CS0151
 helpviewer_keywords:
 - CS0151
 ms.assetid: 1adda08b-6be5-46c8-96f9-5ac7c7bfe48c
-ms.openlocfilehash: b4934474cde7190217753ae952d3b62a652b3745
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: c24f7db54eb3193ad8b83cd329febd19232bd339
+ms.sourcegitcommit: e614e0f3b031293e4107f37f752be43652f3f253
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33210460"
+ms.lasthandoff: 08/26/2018
+ms.locfileid: "42929236"
 ---
 # <a name="compiler-error-cs0151"></a>컴파일러 오류 CS0151
-정수 형식 값이 필요합니다.  
-  
- 정수 데이터 형식이 필요한 상황에서 변수가 사용되었습니다. 자세한 내용은 [형식](../../../csharp/programming-guide/types/index.md)을 참조하세요.  
-  
-## <a name="example"></a>예  
- 이 오류는 변환이 없거나 사용 가능한 암시적 변환으로 인해 모호한 상황이 나타나는 경우에 발생할 수 있습니다. 다음 샘플에서는 CS0151을 생성합니다.  
-  
-```csharp  
-// CS0151.cs  
-public class MyClass  
-{  
-   public static implicit operator int (MyClass aa)  
-   {  
-      return 0;  
-   }  
-  
-   public static implicit operator long (MyClass aa)  
-   {  
-      return 0;  
-   }  
-  
-   public static void Main()  
-   {  
-      MyClass a = new MyClass();  
-  
-      // Compiler cannot choose between int and long  
-      switch (a)   // CS0151  
-      // try the following line instead  
-      // switch ((int)a)  
-      {  
-         case 1:  
-            break;  
-      }  
-   }  
-}  
-```  
-  
-## <a name="example"></a>예  
- Visual Studio 2008 이상에서는 [void](../../../csharp/language-reference/keywords/void.md) 메서드 호출 시 CS0151이 생성됩니다. [int](../../../csharp/language-reference/keywords/int.md) 또는 [long](../../../csharp/language-reference/keywords/long.md)과 같은 정수 형식을 반환하는 메서드를 호출하면 오류를 해결할 수 있습니다.  
-  
-```csharp  
-class C  
-{  
-    static void Main()  
-    {  
-  
-        switch (M()) // CS0151  
-        {  
-            default:  
-                break;  
-        }  
-    }  
-  
-    static void M()  
-    {  
-    }  
-}  
+
+정수 형식 값이 필요합니다.
+
+정수 데이터 형식이 필요한 상황에서 변수가 사용되었습니다. 자세한 내용은 [형식](../../../csharp/programming-guide/types/index.md)을 참조하세요.
+
+## <a name="example-of-ambiguous-conversion"></a>모호한 변환의 예제
+
+이 오류는 변환이 없거나 사용 가능한 암시적 변환으로 인해 모호한 상황이 나타나는 경우에 발생할 수 있습니다. 다음 예제에서는 CS0151을 생성합니다.
+
+```csharp
+public class MyClass
+{
+   public static implicit operator int (MyClass aa)
+   {
+      return 0;
+   }
+
+   public static implicit operator long (MyClass aa)
+   {
+      return 0;
+   }
+
+   public static void Main()
+   {
+      MyClass a = new MyClass();
+
+      // Compiler cannot choose between int and long.
+      switch (a)   // CS0151
+      // try the following line instead
+      // switch ((int)a)
+      {
+         case 1:
+            break;
+      }
+   }
+}
+```
+
+## <a name="example-of-void-method"></a>void 메서드의 예제
+
+[switch](../keywords/switch.md) 일치 식에서 [void](../../../csharp/language-reference/keywords/void.md) 메서드 호출은 CS0151을 생성합니다. [int](../../../csharp/language-reference/keywords/int.md) 또는 [long](../../../csharp/language-reference/keywords/long.md)과 같은 정수 형식을 반환하는 메서드를 대신 호출하면 오류를 해결할 수 있습니다.
+
+```csharp
+class C
+{
+    static void Main()
+    {
+        switch (M()) // CS0151
+        {
+            default:
+                break;
+        }
+    }
+
+    static void M()
+    {
+    }
+}
 ```
