--- a/docs/csharp/language-reference/compiler-messages/cs0173.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0173.md
@@ -1,82 +1,79 @@
 ---
 title: 컴파일러 오류 CS0173
-ms.date: 07/20/2015
+ms.date: 08/14/2018
 f1_keywords:
 - CS0173
 helpviewer_keywords:
 - CS0173
 ms.assetid: eb1797ad-bf62-4e2b-8922-bef4aff36954
-ms.openlocfilehash: a3af3d940538388b0ffd97ba25a7b15c4c23777e
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 0ea8dfd9560ea5962bc786862fcd895311299abf
+ms.sourcegitcommit: 412bbc2e43c3b6ca25b358cdf394be97336f0c24
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33211864"
+ms.lasthandoff: 08/24/2018
+ms.locfileid: "42908214"
 ---
 # <a name="compiler-error-cs0173"></a>컴파일러 오류 CS0173
-'class1'과(와) 'class2' 사이에 암시적 변환이 없으므로 조건식의 형식을 확인할 수 없습니다.  
-  
- 클래스 간의 변환은 서로 다른 클래스의 개체에서 동일한 코드로 작업하려는 경우에 유용합니다. 그러나 함께 작동하는 두 클래스는 상호 중복 변환이나 암시적 변환을 사용할 수 없습니다. `class1` 및 `class2`의 형식은 독립적으로 결정되며, 보다 일반적인 형식이 조건식의 형식으로 선택됩니다. 형식이 결정되는 방식에 대한 자세한 내용은 [조건부 연산자가 암시적으로 캐스팅할 수 없음](https://stackoverflow.com/questions/2215745/conditional-operator-cannot-cast-implicitly/2215959#2215959)을 참조하세요.  
-  
- CS0173을 해결하려면 변환 방향과 관계없이, 그리고 변환이 있는 클래스와 관계없이 `class1` 및 `class2` 간에 하나의 암시적 변환만 있는지 확인합니다. 자세한 내용은 [암시적 숫자 변환 표](../../../csharp/language-reference/keywords/implicit-numeric-conversions-table.md) 및 [변환 연산자](../../../csharp/programming-guide/statements-expressions-operators/conversion-operators.md)를 참조하세요.  
-  
-## <a name="example"></a>예  
- 다음 샘플에서는 CS0173을 생성합니다.  
-  
-```csharp  
-// CS0173.cs  
-public class C {}  
-  
-public class A   
-{  
-    //// The following code defines an implicit conversion operator from    
-    //// type C to type A.  
-    //public static implicit operator A(C c)  
-    //{  
-    //    A a = new A();  
-    //    a = c;  
-    //    return a;  
-    //}  
-}  
-  
-public class MyClass  
-{  
-    public static void F(bool b)  
-    {  
-        A a = new A();  
-        C c = new C();  
-  
-        // The following line causes CS0173 because there is no implicit  
-        // conversion from a to c or from c to a.  
-        object o = b ? a : c;  
-  
-        // To resolve the error, you can cast a and c.  
-        //object o = b ? (object)a : (object)c;  
-  
-        // Alternatively, you can add a conversion operator from class C to  
-        // class A, or from class A to class C, but not both.  
-    }  
-  
-   public static void Main()  
-   {  
-      F(true);  
-   }  
-}  
-```  
-  
-## <a name="example"></a>예  
- 다음 코드는 Visual Studio 2005에서 CS0173을 생성하지 않지만 이후 버전에서 생성합니다.  
-  
-```csharp  
-//cs0173_2.cs  
-class M  
-{  
-    static int Main ()  
-    {  
-        int X = 1;  
-        // The following line causes CS0173 in Visual Studio 2005.  
-        object o = (X == 0) ? null : null;  
-        return -1;  
-    }  
-}  
+
+'class1'과(와) 'class2' 사이에 암시적 변환이 없으므로 조건식의 형식을 확인할 수 없습니다.
+
+클래스 간의 변환은 서로 다른 클래스의 개체에서 동일한 코드로 작업하려는 경우에 유용합니다. 그러나 함께 작동하는 두 클래스는 상호 중복 변환이나 암시적 변환을 사용할 수 없습니다. `class1` 및 `class2`의 형식은 독립적으로 결정되며, 보다 일반적인 형식이 조건식의 형식으로 선택됩니다. 형식이 결정되는 방식에 대한 자세한 내용은 [조건부 연산자가 암시적으로 캐스팅할 수 없음](https://stackoverflow.com/questions/2215745/conditional-operator-cannot-cast-implicitly/2215959#2215959)을 참조하세요.
+
+CS0173을 해결하려면 변환 방향과 관계없이, 그리고 변환이 있는 클래스와 관계없이 `class1` 및 `class2` 간에 하나의 암시적 변환만 있는지 확인합니다. 자세한 내용은 [암시적 숫자 변환 표](../../../csharp/language-reference/keywords/implicit-numeric-conversions-table.md) 및 [변환 연산자](../../../csharp/programming-guide/statements-expressions-operators/conversion-operators.md)를 참조하세요.
+
+## <a name="example"></a>예
+
+다음 예제는 컴파일러 오류 CS0173을 생성합니다.
+
+```csharp
+public class C {}
+
+public class A
+{
+    // The following code defines an implicit conversion operator from
+    // type C to type A.
+    //public static implicit operator A(C c)
+    //{
+    //    A a = new A();
+    //    a = c;
+    //    return a;
+    //}
+}
+
+public class MyClass
+{
+    public static void F(bool b)
+    {
+        A a = new A();
+        C c = new C();
+
+        // The following line causes CS0173 because there is no implicit
+        // conversion from a to c or from c to a.
+        object o = b ? a : c;
+
+        // To resolve the error, you can cast a and c.
+        // object o = b ? (object)a : (object)c;
+
+        // Alternatively, you can add a conversion operator from class C to
+        // class A, or from class A to class C, but not both.
+    }
+
+   public static void Main()
+   {
+      F(true);
+   }
+}
+```
+
+```csharp
+class M
+{
+    static int Main ()
+    {
+        int X = 1;
+        // The following line causes CS0173.
+        object o = (X == 0) ? null : null;
+        return -1;
+    }
+}
 ```
