commit bilingual contents

--- a/docs/visual-basic/misc/bc42031.md
+++ b/docs/visual-basic/misc/bc42031.md
@@ -8,26 +8,26 @@ helpviewer_keywords:
 - BC42031
 ms.assetid: 7d15597c-5988-42ea-a853-63cbf78faaf3
 ms.openlocfilehash: f84eced8f36e404886ae1b435bbb3ba1beffebbd
-ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
+ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/03/2018
-ms.locfileid: "43481320"
+ms.lasthandoff: 09/04/2018
+ms.locfileid: "43564706"
 ---
-# <a name="39catch39-block-never-reached-ltexceptiongt-handled-above-in-the-same-39try39-statement"></a><span data-ttu-id="81361-102">&#39;Catch&#39; 블록에 도달할 수 없습니다 &lt;예외&gt; 윗부분에서 동일한 처리 &#39;보십시오&#39; 문</span><span class="sxs-lookup"><span data-stu-id="81361-102">&#39;Catch&#39; block never reached; &lt;exception&gt; handled above in the same &#39;Try&#39; statement</span></span>
-<span data-ttu-id="81361-103">코드의 `Catch` 블록이 앞의 `Try` 블록에서 처리되므로 도달할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="81361-103">A `Catch` block in the code cannot be reached because it is handled in a preceding `Try` block.</span></span>  
+# <a name="39catch39-block-never-reached-ltexceptiongt-handled-above-in-the-same-39try39-statement"></a><span data-ttu-id="4db8d-102">&#39;Catch&#39; 블록에 도달할 수 없습니다 &lt;예외&gt; 윗부분에서 동일한 처리 &#39;보십시오&#39; 문</span><span class="sxs-lookup"><span data-stu-id="4db8d-102">&#39;Catch&#39; block never reached; &lt;exception&gt; handled above in the same &#39;Try&#39; statement</span></span>
+<span data-ttu-id="4db8d-103">코드의 `Catch` 블록이 앞의 `Try` 블록에서 처리되므로 도달할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="4db8d-103">A `Catch` block in the code cannot be reached because it is handled in a preceding `Try` block.</span></span>  
   
- <span data-ttu-id="81361-104">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="81361-104">By default, this message is a warning.</span></span> <span data-ttu-id="81361-105">경고를 숨기 거 나 경고를 오류로 처리 하는 방법에 대 한 자세한 내용은 참조 하십시오 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)</span><span class="sxs-lookup"><span data-stu-id="81361-105">For more information about hiding warnings or treating warnings as errors, please see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)</span></span>  
+ <span data-ttu-id="4db8d-104">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="4db8d-104">By default, this message is a warning.</span></span> <span data-ttu-id="4db8d-105">경고를 숨기 거 나 경고를 오류로 처리 하는 방법에 대 한 자세한 내용은 참조 하십시오 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)</span><span class="sxs-lookup"><span data-stu-id="4db8d-105">For more information about hiding warnings or treating warnings as errors, please see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)</span></span>  
   
- <span data-ttu-id="81361-106">**오류 ID:** BC42031</span><span class="sxs-lookup"><span data-stu-id="81361-106">**Error ID:** BC42031</span></span>  
+ <span data-ttu-id="4db8d-106">**오류 ID:** BC42031</span><span class="sxs-lookup"><span data-stu-id="4db8d-106">**Error ID:** BC42031</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="81361-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="81361-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4db8d-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="4db8d-107">To correct this error</span></span>  
   
--   <span data-ttu-id="81361-108">중복 문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="81361-108">Remove the redundant statement.</span></span>  
+-   <span data-ttu-id="4db8d-108">중복 문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="4db8d-108">Remove the redundant statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="81361-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="81361-109">See Also</span></span>  
- [<span data-ttu-id="81361-110">방법: Visual Basic에서 예외 Catch</span><span class="sxs-lookup"><span data-stu-id="81361-110">How to: Catch an Exception in Visual Basic</span></span>](https://msdn.microsoft.com/library/f3063c89-d2bf-49b1-91b5-b87edfb18b95)  
- [<span data-ttu-id="81361-111">방법:을 사용 하 여 코드를 테스트 하는 중... Visual Basic의 catch 블록</span><span class="sxs-lookup"><span data-stu-id="81361-111">How to: Test Code with a Try…Catch Block in Visual Basic</span></span>](https://msdn.microsoft.com/library/8368e205-ed73-4185-a247-af84fb4fafa9)  
- [<span data-ttu-id="81361-112">방법: Visual Basic의 Catch 블록에서 오류 필터링</span><span class="sxs-lookup"><span data-stu-id="81361-112">How to: Filter Errors in a Catch Block in Visual Basic</span></span>](https://msdn.microsoft.com/library/85964d0a-56e7-4301-a96e-5eaea23b7b9b)  
- [<span data-ttu-id="81361-113">연습: 구조적 예외 처리 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="81361-113">Walkthrough: Structured Exception Handling (Visual Basic)</span></span>](https://msdn.microsoft.com/library/440da655-4b32-490b-8b16-bfe46f41fa76)  
- [<span data-ttu-id="81361-114">Try...Catch...Finally 문</span><span class="sxs-lookup"><span data-stu-id="81361-114">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
+## <a name="see-also"></a><span data-ttu-id="4db8d-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="4db8d-109">See Also</span></span>  
+ [<span data-ttu-id="4db8d-110">방법: Visual Basic에서 예외 Catch</span><span class="sxs-lookup"><span data-stu-id="4db8d-110">How to: Catch an Exception in Visual Basic</span></span>](https://msdn.microsoft.com/library/f3063c89-d2bf-49b1-91b5-b87edfb18b95)  
+ [<span data-ttu-id="4db8d-111">방법:을 사용 하 여 코드를 테스트 하는 중... Visual Basic의 catch 블록</span><span class="sxs-lookup"><span data-stu-id="4db8d-111">How to: Test Code with a Try…Catch Block in Visual Basic</span></span>](https://msdn.microsoft.com/library/8368e205-ed73-4185-a247-af84fb4fafa9)  
+ [<span data-ttu-id="4db8d-112">방법: Visual Basic의 Catch 블록에서 오류 필터링</span><span class="sxs-lookup"><span data-stu-id="4db8d-112">How to: Filter Errors in a Catch Block in Visual Basic</span></span>](https://msdn.microsoft.com/library/85964d0a-56e7-4301-a96e-5eaea23b7b9b)  
+ [<span data-ttu-id="4db8d-113">연습: 구조적 예외 처리 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="4db8d-113">Walkthrough: Structured Exception Handling (Visual Basic)</span></span>](https://msdn.microsoft.com/library/440da655-4b32-490b-8b16-bfe46f41fa76)  
+ [<span data-ttu-id="4db8d-114">Try...Catch...Finally 문</span><span class="sxs-lookup"><span data-stu-id="4db8d-114">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
