--- a/docs/visual-basic/misc/bc42101.md
+++ b/docs/visual-basic/misc/bc42101.md
@@ -5,29 +5,29 @@ helpviewer_keywords:
 - BC42101
 ms.assetid: 001c8eaa-19b6-44fa-8056-4186ecffbda8
 ms.openlocfilehash: 8172e5893044af3a3048c94b5c768e39f616e5ed
-ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
+ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/02/2018
-ms.locfileid: "43464168"
+ms.lasthandoff: 09/04/2018
+ms.locfileid: "43564792"
 ---
-# <a name="39microsoftvisualbasiccomclassattribute39-on-class-39ltclassnamegt39-implicitly-declares-lttypegt-39ltmembernamegt39-which-conflicts-with-a-member-of-the-same-name-in-lttypegt-39lttypenamegt39"></a><span data-ttu-id="da977-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; 클래스의 &#39; &lt;classname&gt; &#39; 를 암시적으로 선언 &lt;형식&gt; &#39; &lt;membername&gt; &#39;에 있는 동일한 이름의 멤버와 충돌 하는 &lt;종류&gt; &#39; &lt;typename&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="da977-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; on class &#39;&lt;classname&gt;&#39; implicitly declares &lt;type&gt; &#39;&lt;membername&gt;&#39;, which conflicts with a member of the same name in &lt;type&gt; &#39;&lt;typename&gt;&#39;</span></span>
-<span data-ttu-id="da977-103">'Microsoft.VisualBasic.ComClassAttribute' 클래스 '\<classname >' 암시적으로 선언 \<유형 > '\<membername >'에 있는 동일한 이름의 멤버와 충돌 하는 \<유형 > '\< 형식 이름 >'입니다.</span><span class="sxs-lookup"><span data-stu-id="da977-103">'Microsoft.VisualBasic.ComClassAttribute' on class '\<classname>' implicitly declares \<type> '\<membername>', which conflicts with a member of the same name in \<type> '\<typename>'.</span></span> <span data-ttu-id="da977-104">기본 이름은 숨기려는 경우 'Microsoft.VisualBasic.ComClassAttribute(InterfaceShadows:=True)'를 사용 하 여 '\<typename >'입니다.</span><span class="sxs-lookup"><span data-stu-id="da977-104">Use 'Microsoft.VisualBasic.ComClassAttribute(InterfaceShadows:=True)' if you want to hide the name on the base '\<typename>'.</span></span>  
+# <a name="39microsoftvisualbasiccomclassattribute39-on-class-39ltclassnamegt39-implicitly-declares-lttypegt-39ltmembernamegt39-which-conflicts-with-a-member-of-the-same-name-in-lttypegt-39lttypenamegt39"></a><span data-ttu-id="028df-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; 클래스의 &#39; &lt;classname&gt; &#39; 를 암시적으로 선언 &lt;형식&gt; &#39; &lt;membername&gt; &#39;에 있는 동일한 이름의 멤버와 충돌 하는 &lt;종류&gt; &#39; &lt;typename&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="028df-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; on class &#39;&lt;classname&gt;&#39; implicitly declares &lt;type&gt; &#39;&lt;membername&gt;&#39;, which conflicts with a member of the same name in &lt;type&gt; &#39;&lt;typename&gt;&#39;</span></span>
+<span data-ttu-id="028df-103">'Microsoft.VisualBasic.ComClassAttribute' 클래스 '\<classname >' 암시적으로 선언 \<유형 > '\<membername >'에 있는 동일한 이름의 멤버와 충돌 하는 \<유형 > '\< 형식 이름 >'입니다.</span><span class="sxs-lookup"><span data-stu-id="028df-103">'Microsoft.VisualBasic.ComClassAttribute' on class '\<classname>' implicitly declares \<type> '\<membername>', which conflicts with a member of the same name in \<type> '\<typename>'.</span></span> <span data-ttu-id="028df-104">기본 이름은 숨기려는 경우 'Microsoft.VisualBasic.ComClassAttribute(InterfaceShadows:=True)'를 사용 하 여 '\<typename >'입니다.</span><span class="sxs-lookup"><span data-stu-id="028df-104">Use 'Microsoft.VisualBasic.ComClassAttribute(InterfaceShadows:=True)' if you want to hide the name on the base '\<typename>'.</span></span>  
   
- <span data-ttu-id="da977-105">`COMClassAttribute` 특성 블록을 사용하는 클래스가 동일한 이름을 기본 클래스의 멤버로 지정하여 인터페이스를 암시적으로 정의합니다.</span><span class="sxs-lookup"><span data-stu-id="da977-105">A class using a `COMClassAttribute` attribute block implicitly defines an interface with the same name as a member of the base class.</span></span> <span data-ttu-id="da977-106">이 경우 인터페이스 이름이 기본 클래스 멤버를 숨겨야 합니다.</span><span class="sxs-lookup"><span data-stu-id="da977-106">In this situation, the interface name should shadow the base class member.</span></span>  
+ <span data-ttu-id="028df-105">`COMClassAttribute` 특성 블록을 사용하는 클래스가 동일한 이름을 기본 클래스의 멤버로 지정하여 인터페이스를 암시적으로 정의합니다.</span><span class="sxs-lookup"><span data-stu-id="028df-105">A class using a `COMClassAttribute` attribute block implicitly defines an interface with the same name as a member of the base class.</span></span> <span data-ttu-id="028df-106">이 경우 인터페이스 이름이 기본 클래스 멤버를 숨겨야 합니다.</span><span class="sxs-lookup"><span data-stu-id="028df-106">In this situation, the interface name should shadow the base class member.</span></span>  
   
- <span data-ttu-id="da977-107">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="da977-107">By default, this message is a warning.</span></span> <span data-ttu-id="da977-108">경고를 숨기 거 나 오류로 처리 경고 하는 방법에 대 한 자세한 내용은 참조 하세요. [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)합니다.</span><span class="sxs-lookup"><span data-stu-id="da977-108">For more information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="028df-107">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="028df-107">By default, this message is a warning.</span></span> <span data-ttu-id="028df-108">경고를 숨기 거 나 오류로 처리 경고 하는 방법에 대 한 자세한 내용은 참조 하세요. [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)합니다.</span><span class="sxs-lookup"><span data-stu-id="028df-108">For more information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="da977-109">**오류 ID:** BC42101</span><span class="sxs-lookup"><span data-stu-id="da977-109">**Error ID:** BC42101</span></span>  
+ <span data-ttu-id="028df-109">**오류 ID:** BC42101</span><span class="sxs-lookup"><span data-stu-id="028df-109">**Error ID:** BC42101</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="da977-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="da977-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="028df-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="028df-110">To correct this error</span></span>  
   
-1.  <span data-ttu-id="da977-111">기본 클래스 멤버를 숨기려면 `InterfaceShadows:=True` 특성 블록에서 `ComClassAttribute` 를 설정합니다.</span><span class="sxs-lookup"><span data-stu-id="da977-111">If you intend to hide the base class member, set `InterfaceShadows:=True` in the `ComClassAttribute` attribute block.</span></span>  
+1.  <span data-ttu-id="028df-111">기본 클래스 멤버를 숨기려면 `InterfaceShadows:=True` 특성 블록에서 `ComClassAttribute` 를 설정합니다.</span><span class="sxs-lookup"><span data-stu-id="028df-111">If you intend to hide the base class member, set `InterfaceShadows:=True` in the `ComClassAttribute` attribute block.</span></span>  
   
-2.  <span data-ttu-id="da977-112">기본 클래스 멤버를 숨기지 않으려면 클래스 이름을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="da977-112">If you do not intend to hide the base class member, change the name of the class.</span></span>  
+2.  <span data-ttu-id="028df-112">기본 클래스 멤버를 숨기지 않으려면 클래스 이름을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="028df-112">If you do not intend to hide the base class member, change the name of the class.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="da977-113">참고 항목</span><span class="sxs-lookup"><span data-stu-id="da977-113">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="028df-113">참고 항목</span><span class="sxs-lookup"><span data-stu-id="028df-113">See Also</span></span>  
    
    
- [<span data-ttu-id="da977-114">ComClassAttribute 클래스</span><span class="sxs-lookup"><span data-stu-id="da977-114">ComClassAttribute Class</span></span>](https://msdn.microsoft.com/library/5c2f0835-9210-47dc-bc59-5c1769953574)  
- [<span data-ttu-id="da977-115">ComClassAttribute.InterfaceShadows 속성</span><span class="sxs-lookup"><span data-stu-id="da977-115">ComClassAttribute.InterfaceShadows Property</span></span>](https://msdn.microsoft.com/library/0fae25bd-e0ba-4755-a76c-3b526b1ac795)
+ [<span data-ttu-id="028df-114">ComClassAttribute 클래스</span><span class="sxs-lookup"><span data-stu-id="028df-114">ComClassAttribute Class</span></span>](https://msdn.microsoft.com/library/5c2f0835-9210-47dc-bc59-5c1769953574)  
+ [<span data-ttu-id="028df-115">ComClassAttribute.InterfaceShadows 속성</span><span class="sxs-lookup"><span data-stu-id="028df-115">ComClassAttribute.InterfaceShadows Property</span></span>](https://msdn.microsoft.com/library/0fae25bd-e0ba-4755-a76c-3b526b1ac795)
