commit translated contents

--- a/docs/visual-basic/misc/bc30456.md
+++ b/docs/visual-basic/misc/bc30456.md
@@ -1,20 +1,22 @@
 ---
-title: '&#39;&lt;이름&gt; &#39; 의 구성원이 아니므로 &#39; &lt;응용 프로그램 이름&gt;&#39;'
-ms.date: 07/20/2015
+title: '&#39;&lt;이름을&gt; &#39; 의 구성원이 아닌 &#39; &lt;classname&gt;&#39;'
+ms.date: 10/10/2018
 f1_keywords:
 - bc30456
 - vbc30456
 helpviewer_keywords:
 - BC30456
+author: rpetrusha
+ms.author: ronpet
 ms.assetid: 029f9742-858a-40c5-b771-7cdfb2c777cc
-ms.openlocfilehash: 8ebd4ccf092939b4de03fea7fb4715da48c7fbd2
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: c1cedbcd5d1f44c470fa8946273112b776cf4d56
+ms.sourcegitcommit: 15d99019aea4a5c3c91ddc9ba23692284a7f61f3
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33608120"
+ms.lasthandoff: 10/12/2018
+ms.locfileid: "49123191"
 ---
-# <a name="39ltnamegt39-is-not-a-member-of-39ltclassnamegt39"></a>&#39;&lt;이름&gt; &#39; 의 구성원이 아니므로 &#39; &lt;응용 프로그램 이름&gt;&#39;
+# <a name="39ltnamegt39-is-not-a-member-of-39ltclassnamegt39"></a>&#39;&lt;이름을&gt; &#39; 의 구성원이 아닌 &#39; &lt;classname&gt;&#39;
 제공한 멤버가 클래스의 멤버가 아닙니다.  
   
  **오류 ID:** BC30456  
@@ -24,3 +26,14 @@ ms.locfileid: "33608120"
 1.  멤버의 이름이 정확한지 확인합니다.  
   
 2.  클래스의 실제 멤버를 사용합니다.
+
+3. SDK 스타일 프로젝트를 컴파일할 수 하려는 경우 (사용 하 여 프로젝트를 \*줄을 시작 하는.vbproj 파일 `<Project Sdk="Microsoft.NET.Sdk">`), 오류 메시지 참조 형식 또는 Microsoft.VisualBasic.dll 어셈블리의 멤버, 응용 프로그램을 구성 하 고 Visual Basic 런타임 라이브러리에 대 한 참조를 사용 하 여 컴파일하십시오. 기본적으로 라이브러리의 하위 집합은 SDK 스타일 프로젝트에서 어셈블리에 포함 됩니다.
+
+   예를 들어, 다음 예제에서는 있으므로 컴파일되지 않습니다는 <xref:Microsoft.VisualBasic.CompilerServices.Conversions.ToInteger%2A?displayProperty=fullName> 메서드를 찾을 수 없습니다. 응용 프로그램에 포함 된 Visual Basic 런타임 하위 집합에 포함 되지 않습니다.  
+
+   [!code-vb[BC30456](~/samples/snippets/visualbasic/language-reference/error-messages/bc30456/program.vb)]
+
+   이 오류를 해결 하기 위해 추가 합니다 `<VBRuntime>Default</VBRuntime>` 요소는 프로젝트를 `<PropertyGroup>` 섹션에서는 Visual Basic 프로젝트 파일은 다음으로 합니다.
+
+   [!code-vb[BC30456](~/samples/snippets/visualbasic/language-reference/error-messages/bc30456/bc30456.vbproj?highlight=6)]
+
