commit bilingual contents

--- a/docs/visual-basic/misc/bc30241.md
+++ b/docs/visual-basic/misc/bc30241.md
@@ -8,23 +8,23 @@ helpviewer_keywords:
 - BC30241
 ms.assetid: d21fe832-814c-4a33-aa31-a1e425924881
 ms.openlocfilehash: 297f68db2c8e87d130f9a0d7b82127d7ea698e69
-ms.sourcegitcommit: 9bd8f213b50f0e1a73e03bd1e840c917fbd6d20a
-ms.translationtype: HT
+ms.sourcegitcommit: c93fd5139f9efcf6db514e3474301738a6d1d649
+ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 10/25/2018
-ms.locfileid: "50033687"
+ms.lasthandoff: 10/27/2018
+ms.locfileid: "50191760"
 ---
-# <a name="named-argument-expected"></a><span data-ttu-id="1b35f-102">명명된 인수가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="1b35f-102">Named argument expected</span></span>
+# <a name="named-argument-expected"></a><span data-ttu-id="e22c4-102">명명된 인수가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="e22c4-102">Named argument expected</span></span>
 
-<span data-ttu-id="1b35f-103">메서드 호출의 인수 목록이 이름 및 위치 인수는 인수를 전달 합니다.</span><span class="sxs-lookup"><span data-stu-id="1b35f-103">An argument list in a method call passes an argument by name and then an argument by position.</span></span> <span data-ttu-id="1b35f-104">기본적으로 모든 위치 인수 메서드 호출에서 이름으로 전달 된 인수를 앞에 야 합니다.</span><span class="sxs-lookup"><span data-stu-id="1b35f-104">By default, all positional arguments must precede any argument passed by name in a method call.</span></span>  
+<span data-ttu-id="e22c4-103">메서드 호출의 인수 목록이 이름 및 위치 인수는 인수를 전달 합니다.</span><span class="sxs-lookup"><span data-stu-id="e22c4-103">An argument list in a method call passes an argument by name and then an argument by position.</span></span> <span data-ttu-id="e22c4-104">기본적으로 모든 위치 인수 메서드 호출에서 이름으로 전달 된 인수를 앞에 야 합니다.</span><span class="sxs-lookup"><span data-stu-id="e22c4-104">By default, all positional arguments must precede any argument passed by name in a method call.</span></span>  
   
- <span data-ttu-id="1b35f-105">**오류 ID:** BC30241</span><span class="sxs-lookup"><span data-stu-id="1b35f-105">**Error ID:** BC30241</span></span>  
+ <span data-ttu-id="e22c4-105">**오류 ID:** BC30241</span><span class="sxs-lookup"><span data-stu-id="e22c4-105">**Error ID:** BC30241</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1b35f-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="1b35f-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e22c4-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="e22c4-106">To correct this error</span></span>  
   
--   <span data-ttu-id="1b35f-107">컴파일하는 경우 모든 버전의 Visual Basic 15.5 이전의 이름으로 전달 된 인수 앞에 오도록 위치로 전달 된 인수가 인수 목록에 다시 작성 합니다.</span><span class="sxs-lookup"><span data-stu-id="1b35f-107">If you are compiling with any version of Visual Basic earlier than 15.5, rewrite the argument list to place arguments passed by position ahead of arguments passed by name.</span></span>  
+-   <span data-ttu-id="e22c4-107">컴파일하는 경우 모든 버전의 Visual Basic 15.5 이전의 이름으로 전달 된 인수 앞에 오도록 위치로 전달 된 인수가 인수 목록에 다시 작성 합니다.</span><span class="sxs-lookup"><span data-stu-id="e22c4-107">If you are compiling with any version of Visual Basic earlier than 15.5, rewrite the argument list to place arguments passed by position ahead of arguments passed by name.</span></span>  
 
-- <span data-ttu-id="1b35f-108">Visual Basic 15.5를 사용 하 여 컴파일하면 이상 인 경우 다음을 추가 합니다 `<PropertyGroup>` 요소에 \*.vbproj 프로젝트 파일:</span><span class="sxs-lookup"><span data-stu-id="1b35f-108">If you are compiling with Visual Basic 15.5 or later, add the following `<PropertyGroup>` element to your \*.vbproj project file:</span></span>
+- <span data-ttu-id="e22c4-108">Visual Basic 15.5를 사용 하 여 컴파일하면 이상 인 경우 다음을 추가 합니다 `<PropertyGroup>` 요소에 \*.vbproj 프로젝트 파일:</span><span class="sxs-lookup"><span data-stu-id="e22c4-108">If you are compiling with Visual Basic 15.5 or later, add the following `<PropertyGroup>` element to your \*.vbproj project file:</span></span>
  
    ```xml
    <PropertyGroup>
@@ -32,5 +32,5 @@ ms.locfileid: "50033687"
    </PropertyGroup>
    ```  
   
-## <a name="see-also"></a><span data-ttu-id="1b35f-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="1b35f-109">See Also</span></span>  
- [<span data-ttu-id="1b35f-110">위치 및 이름으로 인수 전달</span><span class="sxs-lookup"><span data-stu-id="1b35f-110">Passing Arguments by Position and by Name</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+## <a name="see-also"></a><span data-ttu-id="e22c4-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="e22c4-109">See Also</span></span>  
+ [<span data-ttu-id="e22c4-110">위치 및 이름으로 인수 전달</span><span class="sxs-lookup"><span data-stu-id="e22c4-110">Passing Arguments by Position and by Name</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
