commit translated contents

--- a/docs/csharp/language-reference/compiler-messages/cs0029.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0029.md
@@ -29,7 +29,7 @@ i = lng;
 
  `i = lng;`는 할당을 수행하지만 대입 연산자의 왼쪽과 오른쪽에 있는 변수의 데이터 형식이 일치하지 않습니다. 할당 전에 컴파일러에서 long 형식인 `lng` 변수를 int로 암시적으로 변환합니다. 명시적으로 컴파일러에 이 변환을 수행하도록 지시하는 코드가 없으므로 이 변환은 암시적입니다. 이 코드의 문제는 이 변환이 축소 변환으로 간주되며, 데이터 손실 가능성이 있기 때문에 컴파일러에서 암시적 축소 변환을 허용하지 않는다는 것입니다.  
   
- 축소 변환은 변환할 데이터 형식보다 작은 메모리 저장소 공간을 사용하는 데이터 형식으로 변환할 때 발생합니다. 예를 들어 long을 int로 변환하는 것은 축소 변환으로 간주됩니다. long은 8바이트의 메모리를 사용하고 int는 4바이트를 사용합니다. 데이터 손실이 어떻게 발생할 수 있는지 확인하려면 다음 샘플을 고려해보세요.  
+ 축소 변환은 변환할 데이터 형식보다 작은 메모리 스토리지 공간을 사용하는 데이터 형식으로 변환할 때 발생합니다. 예를 들어 long을 int로 변환하는 것은 축소 변환으로 간주됩니다. long은 8바이트의 메모리를 사용하고 int는 4바이트를 사용합니다. 데이터 손실이 어떻게 발생할 수 있는지 확인하려면 다음 샘플을 고려해보세요.  
 
 ```csharp
 int i = 50;  
@@ -39,7 +39,7 @@ i = lng;
 
  현재 `lng` 변수에 포함된 값은 너무 커서 `i` 변수에 저장할 수 없습니다. 이 값을 int 형식으로 변환하면 데이터의 일부가 손실되고 변환된 값은 변환 전의 값과 같지 않습니다.  
   
- 확대 변환은 축소 변환의 반대입니다. 확대 변환에서는 변환할 데이터 형식보다 많은 메모리 저장소 공간을 사용하는 데이터 형식으로 변환합니다. 확대 변환의 예는 다음과 같습니다.  
+ 확대 변환은 축소 변환의 반대입니다. 확대 변환에서는 변환할 데이터 형식보다 많은 메모리 스토리지 공간을 사용하는 데이터 형식으로 변환합니다. 확대 변환의 예는 다음과 같습니다.  
 
 ```csharp
 int i = 50;  
