--- a/docs/csharp/language-reference/compiler-messages/cs1612.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1612.md
@@ -32,9 +32,9 @@ ms.Name = "MyStruct42";
 list[0] = ms;  
 ```  
   
- 이 오류는 할당 시 값 형식이 복사되기 때문에 발생합니다. 속성 또는 인덱서에서 값 형식을 검색하는 경우 개체 자체에 대한 참조가 아니라 개체 복사본을 얻게 됩니다. 반환되는 복사본은 저장소 위치(변수)가 아니라 실제로 메서드이기 때문에 속성 또는 인덱서에서 저장되지 않습니다. 선언하는 변수에 복사본을 저장해야 수정할 수 있습니다.  
+ 이 오류는 할당 시 값 형식이 복사되기 때문에 발생합니다. 속성 또는 인덱서에서 값 형식을 검색하는 경우 개체 자체에 대한 참조가 아니라 개체 복사본을 얻게 됩니다. 반환되는 복사본은 스토리지 위치(변수)가 아니라 실제로 메서드이기 때문에 속성 또는 인덱서에서 저장되지 않습니다. 선언하는 변수에 복사본을 저장해야 수정할 수 있습니다.  
   
- 이 경우 속성 또는 인덱서가 저장소 위치인 기존 개체에 대한 참조를 반환하기 때문에 참조 형식에서는 오류가 발생하지 않습니다.  
+ 이 경우 속성 또는 인덱서가 스토리지 위치인 기존 개체에 대한 참조를 반환하기 때문에 참조 형식에서는 오류가 발생하지 않습니다.  
   
  클래스 또는 구조체를 정의하는 경우 구조체의 멤버에 대한 액세스를 제공하도록 속성 선언을 수정하여 이 오류를 해결할 수 있습니다. 클라이언트 코드를 작성하는 경우 구조체의 고유한 인스턴스를 만들고, 해당 필드를 수정한 다음 전체 구조체를 속성에 다시 할당하여 오류를 해결할 수 있습니다. 세 번째 방법으로 구조체를 클래스로 변경할 수 있습니다.  
   
