--- a/docs/csharp/misc/cs0832.md
+++ b/docs/csharp/misc/cs0832.md
@@ -16,7 +16,7 @@ ms.locfileid: "33301023"
 # <a name="compiler-error-cs0832"></a>컴파일러 오류 CS0832
 식 트리에는 대입 연산자를 사용할 수 없습니다.  
   
- 식 트리에는 변수 상태가 유지되지 않거나 저장소 위치 개념이 없습니다.  
+ 식 트리에는 변수 상태가 유지되지 않거나 스토리지 위치 개념이 없습니다.  
   
 ## <a name="to-correct-this-error"></a>이 오류를 해결하려면  
   
