commit bilingual contents

--- a/docs/visual-basic/misc/bc30184.md
+++ b/docs/visual-basic/misc/bc30184.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30184
 ms.assetid: b7f5ebf0-10c8-4320-8caf-dffc24ae8a71
-ms.openlocfilehash: a099c1da4e10f7704abd5ff09bf6ecd220312410
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: a02668d23d44cec0ae8e08c02af31a9dcbf9331e
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53769963"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54494407"
 ---
-# <a name="end-enum-must-be-preceded-by-a-matching-enum"></a><span data-ttu-id="6ea57-102">'End Enum'은 짝이 되는 'Enum' 뒤에 와야 합니다.</span><span class="sxs-lookup"><span data-stu-id="6ea57-102">'End Enum' must be preceded by a matching 'Enum'</span></span>
-<span data-ttu-id="6ea57-103">`End Enum` 문이 해당 `Enum` 문 없이 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="6ea57-103">An `End Enum` statement occurs without a corresponding `Enum` statement.</span></span> <span data-ttu-id="6ea57-104">`End Enum` 은 해당 `Enum` 문 뒤에 와야 합니다.</span><span class="sxs-lookup"><span data-stu-id="6ea57-104">`End Enum` must be preceded by a corresponding `Enum` statement.</span></span>  
+# <a name="end-enum-must-be-preceded-by-a-matching-enum"></a><span data-ttu-id="431d8-102">'End Enum'은 짝이 되는 'Enum' 뒤에 와야 합니다.</span><span class="sxs-lookup"><span data-stu-id="431d8-102">'End Enum' must be preceded by a matching 'Enum'</span></span>
+<span data-ttu-id="431d8-103">`End Enum` 문이 해당 `Enum` 문 없이 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="431d8-103">An `End Enum` statement occurs without a corresponding `Enum` statement.</span></span> <span data-ttu-id="431d8-104">`End Enum` 은 해당 `Enum` 문 뒤에 와야 합니다.</span><span class="sxs-lookup"><span data-stu-id="431d8-104">`End Enum` must be preceded by a corresponding `Enum` statement.</span></span>  
   
- <span data-ttu-id="6ea57-105">**오류 ID:** BC30184</span><span class="sxs-lookup"><span data-stu-id="6ea57-105">**Error ID:** BC30184</span></span>  
+ <span data-ttu-id="431d8-105">**오류 ID:** BC30184</span><span class="sxs-lookup"><span data-stu-id="431d8-105">**Error ID:** BC30184</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6ea57-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="6ea57-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="431d8-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="431d8-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="6ea57-107">앞에 있는 `Enum` 문의 철자가 잘못되거나 유효하지 않은지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="6ea57-107">Ensure that a preceding `Enum` statement is not misspelled or otherwise invalid.</span></span>  
+1.  <span data-ttu-id="431d8-107">앞에 있는 `Enum` 문의 철자가 잘못되거나 유효하지 않은지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="431d8-107">Ensure that a preceding `Enum` statement is not misspelled or otherwise invalid.</span></span>  
   
-2.  <span data-ttu-id="6ea57-108">`Enum` 멤버의 형식이 올바르게 지정되었는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="6ea57-108">Ensure that the `Enum` members are correctly formatted.</span></span>  
+2.  <span data-ttu-id="431d8-108">`Enum` 멤버의 형식이 올바르게 지정되었는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="431d8-108">Ensure that the `Enum` members are correctly formatted.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6ea57-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="6ea57-109">See Also</span></span>  
- [<span data-ttu-id="6ea57-110">Enum 문</span><span class="sxs-lookup"><span data-stu-id="6ea57-110">Enum Statement</span></span>](../../visual-basic/language-reference/statements/enum-statement.md)
+## <a name="see-also"></a><span data-ttu-id="431d8-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="431d8-109">See also</span></span>
+- [<span data-ttu-id="431d8-110">Enum 문</span><span class="sxs-lookup"><span data-stu-id="431d8-110">Enum Statement</span></span>](../../visual-basic/language-reference/statements/enum-statement.md)
