--- a/docs/visual-basic/misc/bc30217.md
+++ b/docs/visual-basic/misc/bc30217.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30217
 ms.assetid: 02e4f418-fd5d-41a4-8896-70d06eb5035a
-ms.openlocfilehash: c95366fe5323509b105125ad0a85eed863fb6548
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: bead6f6b588d993ff0663f66f9d6fa801259dec2
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33607175"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54494537"
 ---
-# <a name="string-constant-expected"></a><span data-ttu-id="b7098-102">문자열 상수가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="b7098-102">String constant expected</span></span>
-<span data-ttu-id="b7098-103">문자열 상수가 필요한 위치에 큰따옴표(") 이외의 문자가 있습니다.</span><span class="sxs-lookup"><span data-stu-id="b7098-103">A character other than a double quotation mark (") occurs where the context requires a string constant.</span></span> <span data-ttu-id="b7098-104">한 가지 가능한 원인은 문자열에서 따옴표가 누락된 것입니다.</span><span class="sxs-lookup"><span data-stu-id="b7098-104">One possible cause is that the quotation marks are missing from the string.</span></span>  
+# <a name="string-constant-expected"></a><span data-ttu-id="590b0-102">문자열 상수가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="590b0-102">String constant expected</span></span>
+<span data-ttu-id="590b0-103">문자열 상수가 필요한 위치에 큰따옴표(") 이외의 문자가 있습니다.</span><span class="sxs-lookup"><span data-stu-id="590b0-103">A character other than a double quotation mark (") occurs where the context requires a string constant.</span></span> <span data-ttu-id="590b0-104">한 가지 가능한 원인은 문자열에서 따옴표가 누락된 것입니다.</span><span class="sxs-lookup"><span data-stu-id="590b0-104">One possible cause is that the quotation marks are missing from the string.</span></span>  
   
- <span data-ttu-id="b7098-105">**오류 ID:** BC30217</span><span class="sxs-lookup"><span data-stu-id="b7098-105">**Error ID:** BC30217</span></span>  
+ <span data-ttu-id="590b0-105">**오류 ID:** BC30217</span><span class="sxs-lookup"><span data-stu-id="590b0-105">**Error ID:** BC30217</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b7098-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b7098-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="590b0-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="590b0-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="b7098-107">문자열이 큰따옴표로 제대로 묶여 있는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="b7098-107">Ensure that the string is properly enclosed in double quotation marks.</span></span>  
+1.  <span data-ttu-id="590b0-107">문자열이 큰따옴표로 제대로 묶여 있는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="590b0-107">Ensure that the string is properly enclosed in double quotation marks.</span></span>  
   
-2.  <span data-ttu-id="b7098-108">문자열 상수를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="b7098-108">Supply a string constant.</span></span>  
+2.  <span data-ttu-id="590b0-108">문자열 상수를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="590b0-108">Supply a string constant.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b7098-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="b7098-109">See Also</span></span>  
- [<span data-ttu-id="b7098-110">상수 및 리터럴 데이터 형식</span><span class="sxs-lookup"><span data-stu-id="b7098-110">Constant and Literal Data Types</span></span>](../../visual-basic/programming-guide/language-features/constants-enums/constant-and-literal-data-types.md)
+## <a name="see-also"></a><span data-ttu-id="590b0-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="590b0-109">See also</span></span>
+- [<span data-ttu-id="590b0-110">상수 및 리터럴 데이터 형식</span><span class="sxs-lookup"><span data-stu-id="590b0-110">Constant and Literal Data Types</span></span>](../../visual-basic/programming-guide/language-features/constants-enums/constant-and-literal-data-types.md)
