--- a/docs/visual-basic/misc/bc30389.md
+++ b/docs/visual-basic/misc/bc30389.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30389
 ms.assetid: fae58a68-df91-4741-a8c9-f1bb10e166e2
-ms.openlocfilehash: 7d185f38904ac1162641ad7d45be005dfaa67712
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: ff8ce3ca0db30ccbffde8b9bf553a9cc64f2dca5
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53768221"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54495190"
 ---
-# <a name="ltmethodgt-is-not-accessible-in-this-context-because-it-is-ltmodifiergt"></a><span data-ttu-id="53a0d-102">'&lt;메서드&gt;'is not이 컨텍스트에서 액세스할 수 있기 때문 에'&lt;한정자&gt;'</span><span class="sxs-lookup"><span data-stu-id="53a0d-102">'&lt;method&gt;' is not accessible in this context because it is '&lt;modifier&gt;'</span></span>
-<span data-ttu-id="53a0d-103">`Private`으로 선언되었으므로 이 컨텍스트에서 액세스할 수 없는 메서드에 액세스하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="53a0d-103">You have attempted to access a method that is not accessible in this context because it has been declared `Private`.</span></span> <span data-ttu-id="53a0d-104">이 오류에 대 한 가능한 원인은 Visual Basic 컴파일러는 클래스의 모든 멤버 가져오고 대/소문자를 이므로 대/소문자만 다른 이름이 충돌할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="53a0d-104">A possible cause for this error is that the Visual Basic compiler imports all members of a class and is case-insensitive, so names differentiated only by casing may collide.</span></span>  
+# <a name="ltmethodgt-is-not-accessible-in-this-context-because-it-is-ltmodifiergt"></a><span data-ttu-id="d4232-102">'&lt;메서드&gt;'is not이 컨텍스트에서 액세스할 수 있기 때문 에'&lt;한정자&gt;'</span><span class="sxs-lookup"><span data-stu-id="d4232-102">'&lt;method&gt;' is not accessible in this context because it is '&lt;modifier&gt;'</span></span>
+<span data-ttu-id="d4232-103">`Private`으로 선언되었으므로 이 컨텍스트에서 액세스할 수 없는 메서드에 액세스하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="d4232-103">You have attempted to access a method that is not accessible in this context because it has been declared `Private`.</span></span> <span data-ttu-id="d4232-104">이 오류에 대 한 가능한 원인은 Visual Basic 컴파일러는 클래스의 모든 멤버 가져오고 대/소문자를 이므로 대/소문자만 다른 이름이 충돌할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="d4232-104">A possible cause for this error is that the Visual Basic compiler imports all members of a class and is case-insensitive, so names differentiated only by casing may collide.</span></span>  
   
- <span data-ttu-id="53a0d-105">**오류 ID:** BC30389</span><span class="sxs-lookup"><span data-stu-id="53a0d-105">**Error ID:** BC30389</span></span>  
+ <span data-ttu-id="d4232-105">**오류 ID:** BC30389</span><span class="sxs-lookup"><span data-stu-id="d4232-105">**Error ID:** BC30389</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="53a0d-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="53a0d-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d4232-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d4232-106">To correct this error</span></span>  
   
--   <span data-ttu-id="53a0d-107">메서드 `Public`을 선언하는 것이 좋습니다.</span><span class="sxs-lookup"><span data-stu-id="53a0d-107">Consider declaring the method `Public`.</span></span>  
+-   <span data-ttu-id="d4232-107">메서드 `Public`을 선언하는 것이 좋습니다.</span><span class="sxs-lookup"><span data-stu-id="d4232-107">Consider declaring the method `Public`.</span></span>  
   
--   <span data-ttu-id="53a0d-108">이름이 충돌하여 오류가 발생하는 경우 충돌하는 이름에 대/소문자 이외의 다른 점을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="53a0d-108">If the error is caused by a name collision, differentiate the colliding names by more than case.</span></span>  
+-   <span data-ttu-id="d4232-108">이름이 충돌하여 오류가 발생하는 경우 충돌하는 이름에 대/소문자 이외의 다른 점을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="d4232-108">If the error is caused by a name collision, differentiate the colliding names by more than case.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="53a0d-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="53a0d-109">See Also</span></span>  
- [<span data-ttu-id="53a0d-110">전용</span><span class="sxs-lookup"><span data-stu-id="53a0d-110">Private</span></span>](../../visual-basic/language-reference/modifiers/private.md)
+## <a name="see-also"></a><span data-ttu-id="d4232-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="d4232-109">See also</span></span>
+- [<span data-ttu-id="d4232-110">전용</span><span class="sxs-lookup"><span data-stu-id="d4232-110">Private</span></span>](../../visual-basic/language-reference/modifiers/private.md)
