--- a/docs/visual-basic/misc/bc30719.md
+++ b/docs/visual-basic/misc/bc30719.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30719
 ms.assetid: bed552d4-9576-4445-b3a9-a95d613db8fc
-ms.openlocfilehash: 5e43fdfa4f6704afbf5afc22072e8c402faef75c
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: a30db4699411078d69e35ea9221f11556539e425
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53767883"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54498010"
 ---
-# <a name="case-statements-are-not-valid-in-the-immediate-window"></a><span data-ttu-id="d27e6-102">직접 실행 창에서는 'Case' 문을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="d27e6-102">'Case' statements are not valid in the Immediate window</span></span>
-<span data-ttu-id="d27e6-103">`Case` 문은 소스 코드에서만 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="d27e6-103">`Case` statements can only be used in source code.</span></span>  
+# <a name="case-statements-are-not-valid-in-the-immediate-window"></a><span data-ttu-id="37778-102">직접 실행 창에서는 'Case' 문을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="37778-102">'Case' statements are not valid in the Immediate window</span></span>
+<span data-ttu-id="37778-103">`Case` 문은 소스 코드에서만 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="37778-103">`Case` statements can only be used in source code.</span></span>  
   
- <span data-ttu-id="d27e6-104">**오류 ID:** BC30719</span><span class="sxs-lookup"><span data-stu-id="d27e6-104">**Error ID:** BC30719</span></span>  
+ <span data-ttu-id="37778-104">**오류 ID:** BC30719</span><span class="sxs-lookup"><span data-stu-id="37778-104">**Error ID:** BC30719</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d27e6-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d27e6-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="37778-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="37778-105">To correct this error</span></span>  
   
--   <span data-ttu-id="d27e6-106">`Case` 직접 실행 **창에서** 문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="d27e6-106">Remove `Case` statements from **Immediate** window.</span></span>  
+-   <span data-ttu-id="37778-106">`Case` 직접 실행 **창에서** 문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="37778-106">Remove `Case` statements from **Immediate** window.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d27e6-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="d27e6-107">See Also</span></span>  
- [<span data-ttu-id="d27e6-108">Visual Studio의 디버깅</span><span class="sxs-lookup"><span data-stu-id="d27e6-108">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
+## <a name="see-also"></a><span data-ttu-id="37778-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="37778-107">See also</span></span>
+- [<span data-ttu-id="37778-108">Visual Studio의 디버깅</span><span class="sxs-lookup"><span data-stu-id="37778-108">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
