--- a/docs/visual-basic/misc/bc32115.md
+++ b/docs/visual-basic/misc/bc32115.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC32115
 ms.assetid: 98053645-fa76-4826-a7c1-f1bdf3511863
-ms.openlocfilehash: b46485e5d4c7e435569f22d7c3fddf2abf43d15f
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: c2de7eb75d2a3b2e07a3d692d64ce2dd94f3e9e0
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53777308"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54494472"
 ---
-# <a name="systemnullable-does-not-satisfy-the-structure-constraint-for-type-parameter-lttypeparameternamegt"></a><span data-ttu-id="a202c-102">'System.Nullable' 형식 매개 변수에 대 한 'Structure' 제약 조건을 충족 하지 않는 '&lt;typeparametername&gt;'</span><span class="sxs-lookup"><span data-stu-id="a202c-102">'System.Nullable' does not satisfy the 'Structure' constraint for type parameter '&lt;typeparametername&gt;'</span></span>
-<span data-ttu-id="a202c-103"><xref:System.Nullable%601> 제약 조건이 있는 형식 매개 변수에 `Structure` 의 형식 인수를 전달하여 제네릭 형식을 호출합니다.</span><span class="sxs-lookup"><span data-stu-id="a202c-103">A generic type is invoked passing a type argument of <xref:System.Nullable%601> to a type parameter with a `Structure` constraint.</span></span>  
+# <a name="systemnullable-does-not-satisfy-the-structure-constraint-for-type-parameter-lttypeparameternamegt"></a><span data-ttu-id="bda3c-102">'System.Nullable' 형식 매개 변수에 대 한 'Structure' 제약 조건을 충족 하지 않는 '&lt;typeparametername&gt;'</span><span class="sxs-lookup"><span data-stu-id="bda3c-102">'System.Nullable' does not satisfy the 'Structure' constraint for type parameter '&lt;typeparametername&gt;'</span></span>
+<span data-ttu-id="bda3c-103"><xref:System.Nullable%601> 제약 조건이 있는 형식 매개 변수에 `Structure` 의 형식 인수를 전달하여 제네릭 형식을 호출합니다.</span><span class="sxs-lookup"><span data-stu-id="bda3c-103">A generic type is invoked passing a type argument of <xref:System.Nullable%601> to a type parameter with a `Structure` constraint.</span></span>  
   
- <span data-ttu-id="a202c-104">CLR(공용 언어 런타임)에서는 <xref:System.Nullable%601> 구조체를 자체의 형식 인수로 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="a202c-104">The common language runtime (CLR) specifically disallows the <xref:System.Nullable%601> structure as a type argument to itself.</span></span> <span data-ttu-id="a202c-105">구조체이고 `Structure` 제약 조건을 만족하는 경우에도 재귀적으로 사용하면 `Nullable(Of Nullable(Of Nullable))`과 같은 잘못된 구문이 생성됩니다.</span><span class="sxs-lookup"><span data-stu-id="a202c-105">Even though it is a structure and would otherwise satisfy a `Structure` constraint, using it recursively could lead to awkward constructions such as `Nullable(Of Nullable(Of Nullable))`.</span></span>  
+ <span data-ttu-id="bda3c-104">CLR(공용 언어 런타임)에서는 <xref:System.Nullable%601> 구조체를 자체의 형식 인수로 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="bda3c-104">The common language runtime (CLR) specifically disallows the <xref:System.Nullable%601> structure as a type argument to itself.</span></span> <span data-ttu-id="bda3c-105">구조체이고 `Structure` 제약 조건을 만족하는 경우에도 재귀적으로 사용하면 `Nullable(Of Nullable(Of Nullable))`과 같은 잘못된 구문이 생성됩니다.</span><span class="sxs-lookup"><span data-stu-id="bda3c-105">Even though it is a structure and would otherwise satisfy a `Structure` constraint, using it recursively could lead to awkward constructions such as `Nullable(Of Nullable(Of Nullable))`.</span></span>  
   
- <span data-ttu-id="a202c-106">**오류 ID:** BC32115</span><span class="sxs-lookup"><span data-stu-id="a202c-106">**Error ID:** BC32115</span></span>  
+ <span data-ttu-id="bda3c-106">**오류 ID:** BC32115</span><span class="sxs-lookup"><span data-stu-id="bda3c-106">**Error ID:** BC32115</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a202c-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="a202c-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="bda3c-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="bda3c-107">To correct this error</span></span>  
   
--   <span data-ttu-id="a202c-108">형식 매개 변수에서 `Structure` 제약 조건을 제거하거나 형식 인수를 <xref:System.Nullable%601>이외의 다른 값 형식으로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="a202c-108">Either remove the `Structure` constraint from the type parameter, or change the type argument to some value type other than <xref:System.Nullable%601>.</span></span>  
+-   <span data-ttu-id="bda3c-108">형식 매개 변수에서 `Structure` 제약 조건을 제거하거나 형식 인수를 <xref:System.Nullable%601>이외의 다른 값 형식으로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="bda3c-108">Either remove the `Structure` constraint from the type parameter, or change the type argument to some value type other than <xref:System.Nullable%601>.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a202c-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="a202c-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="bda3c-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="bda3c-109">See also</span></span>
 
-- <xref:System.Nullable%601>  
-- [<span data-ttu-id="a202c-110">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="a202c-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
-- [<span data-ttu-id="a202c-111">구조체(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="a202c-111">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
+- <xref:System.Nullable%601>
+- [<span data-ttu-id="bda3c-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="bda3c-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="bda3c-111">구조체(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="bda3c-111">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
