commit bilingual contents

--- a/docs/visual-basic/misc/bc30206.md
+++ b/docs/visual-basic/misc/bc30206.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC30206
 ms.assetid: f9def54d-eb4c-4ab7-bb8f-53800b87be36
-ms.openlocfilehash: 7a80cfbd13ddd1e9f25e2dc59ba5e3f77555450a
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 7a9bb08b8e66e355f8d49e033002606840fdd4b8
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53775072"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54542173"
 ---
-# <a name="option-must-be-followed-by-compare-explicit-infer-or-strict"></a><span data-ttu-id="199ef-102">'Option' 뒤에는 'Compare', 'Explicit', 'Infer' 또는 'Strict'가 와야 합니다.</span><span class="sxs-lookup"><span data-stu-id="199ef-102">'Option' must be followed by 'Compare', 'Explicit', 'Infer', or 'Strict'</span></span>
-<span data-ttu-id="199ef-103">`Option` 문에서 설정할 수 있는 유일한 옵션은 `Compare`, `Explicit`, `Infer`및 `Strict`입니다.</span><span class="sxs-lookup"><span data-stu-id="199ef-103">The only options that you can set with the `Option` statement are `Compare`, `Explicit`, `Infer`, and `Strict`.</span></span>  
+# <a name="option-must-be-followed-by-compare-explicit-infer-or-strict"></a><span data-ttu-id="9c9db-102">'Option' 뒤에는 'Compare', 'Explicit', 'Infer' 또는 'Strict'가 와야 합니다.</span><span class="sxs-lookup"><span data-stu-id="9c9db-102">'Option' must be followed by 'Compare', 'Explicit', 'Infer', or 'Strict'</span></span>
+<span data-ttu-id="9c9db-103">`Option` 문에서 설정할 수 있는 유일한 옵션은 `Compare`, `Explicit`, `Infer`및 `Strict`입니다.</span><span class="sxs-lookup"><span data-stu-id="9c9db-103">The only options that you can set with the `Option` statement are `Compare`, `Explicit`, `Infer`, and `Strict`.</span></span>  
   
- <span data-ttu-id="199ef-104">**오류 ID:** BC30206</span><span class="sxs-lookup"><span data-stu-id="199ef-104">**Error ID:** BC30206</span></span>  
+ <span data-ttu-id="9c9db-104">**오류 ID:** BC30206</span><span class="sxs-lookup"><span data-stu-id="9c9db-104">**Error ID:** BC30206</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="199ef-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="199ef-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9c9db-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="9c9db-105">To correct this error</span></span>  
   
--   <span data-ttu-id="199ef-106">옵션 키워드(`Compare`, `Explicit`, `Infer`또는 `Strict`)의 철자가 맞는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="199ef-106">Check to see whether an option keyword (`Compare`, `Explicit`, `Infer`, or `Strict`) is misspelled.</span></span>  
+-   <span data-ttu-id="9c9db-106">옵션 키워드(`Compare`, `Explicit`, `Infer`또는 `Strict`)의 철자가 맞는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="9c9db-106">Check to see whether an option keyword (`Compare`, `Explicit`, `Infer`, or `Strict`) is misspelled.</span></span>  
   
--   <span data-ttu-id="199ef-107">`Option` 문이 완전하지 않은지 여부를 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="199ef-107">Check to see whether the `Option` statement is incomplete.</span></span>  
+-   <span data-ttu-id="9c9db-107">`Option` 문이 완전하지 않은지 여부를 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="9c9db-107">Check to see whether the `Option` statement is incomplete.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="199ef-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="199ef-108">See Also</span></span>  
- [<span data-ttu-id="199ef-109">옵션 \<키워드 > 문</span><span class="sxs-lookup"><span data-stu-id="199ef-109">Option \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/option-keyword-statement.md)  
- [<span data-ttu-id="199ef-110">Option Compare 문</span><span class="sxs-lookup"><span data-stu-id="199ef-110">Option Compare Statement</span></span>](../../visual-basic/language-reference/statements/option-compare-statement.md)  
- [<span data-ttu-id="199ef-111">Option Explicit 문</span><span class="sxs-lookup"><span data-stu-id="199ef-111">Option Explicit Statement</span></span>](../../visual-basic/language-reference/statements/option-explicit-statement.md)  
- [<span data-ttu-id="199ef-112">Option Infer 문</span><span class="sxs-lookup"><span data-stu-id="199ef-112">Option Infer Statement</span></span>](../../visual-basic/language-reference/statements/option-infer-statement.md)  
- [<span data-ttu-id="199ef-113">Option Strict 문</span><span class="sxs-lookup"><span data-stu-id="199ef-113">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
+## <a name="see-also"></a><span data-ttu-id="9c9db-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="9c9db-108">See also</span></span>
+- [<span data-ttu-id="9c9db-109">옵션 \<키워드 > 문</span><span class="sxs-lookup"><span data-stu-id="9c9db-109">Option \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/option-keyword-statement.md)
+- [<span data-ttu-id="9c9db-110">Option Compare 문</span><span class="sxs-lookup"><span data-stu-id="9c9db-110">Option Compare Statement</span></span>](../../visual-basic/language-reference/statements/option-compare-statement.md)
+- [<span data-ttu-id="9c9db-111">Option Explicit 문</span><span class="sxs-lookup"><span data-stu-id="9c9db-111">Option Explicit Statement</span></span>](../../visual-basic/language-reference/statements/option-explicit-statement.md)
+- [<span data-ttu-id="9c9db-112">Option Infer 문</span><span class="sxs-lookup"><span data-stu-id="9c9db-112">Option Infer Statement</span></span>](../../visual-basic/language-reference/statements/option-infer-statement.md)
+- [<span data-ttu-id="9c9db-113">Option Strict 문</span><span class="sxs-lookup"><span data-stu-id="9c9db-113">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
