--- a/docs/visual-basic/misc/bc32017.md
+++ b/docs/visual-basic/misc/bc32017.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC32017
 ms.assetid: 7e06022f-d12d-4f17-b712-bad573fea116
-ms.openlocfilehash: aec180bc3492cb4c7117e8d84b869d6e604e9f80
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 8eb0436a22e4f9ed0be6dc49d196462c9b9ecf3c
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53761131"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54508511"
 ---
-# <a name="comma--or-a-valid-expression-continuation-expected"></a><span data-ttu-id="89b32-102">쉼표, ')' 또는 이어지는 올바른 식이 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="89b32-102">Comma, ')', or a valid expression continuation expected</span></span>
-<span data-ttu-id="89b32-103">프로시저 정의 또는 프로시저 호출의 인수 목록과 같은 목록에서 해당 멤버가 제대로 구분되거나 종료되지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="89b32-103">A list, such as an argument list in a procedure definition or a procedure call, does not properly separate or terminate its members.</span></span> <span data-ttu-id="89b32-104">두 목록 멤버가 공백으로만 구분되었기 때문일 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="89b32-104">One possible cause is two list members being separated only by a space or spaces.</span></span>  
+# <a name="comma--or-a-valid-expression-continuation-expected"></a><span data-ttu-id="a0f1c-102">쉼표, ')' 또는 이어지는 올바른 식이 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="a0f1c-102">Comma, ')', or a valid expression continuation expected</span></span>
+<span data-ttu-id="a0f1c-103">프로시저 정의 또는 프로시저 호출의 인수 목록과 같은 목록에서 해당 멤버가 제대로 구분되거나 종료되지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="a0f1c-103">A list, such as an argument list in a procedure definition or a procedure call, does not properly separate or terminate its members.</span></span> <span data-ttu-id="a0f1c-104">두 목록 멤버가 공백으로만 구분되었기 때문일 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="a0f1c-104">One possible cause is two list members being separated only by a space or spaces.</span></span>  
   
- <span data-ttu-id="89b32-105">**오류 ID:** BC32017</span><span class="sxs-lookup"><span data-stu-id="89b32-105">**Error ID:** BC32017</span></span>  
+ <span data-ttu-id="a0f1c-105">**오류 ID:** BC32017</span><span class="sxs-lookup"><span data-stu-id="a0f1c-105">**Error ID:** BC32017</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="89b32-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="89b32-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a0f1c-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="a0f1c-106">To correct this error</span></span>  
   
--   <span data-ttu-id="89b32-107">쉼표(,)를 사용하여 목록 멤버를 구분하고, 닫는 괄호())를 사용하여 목록을 종료합니다.</span><span class="sxs-lookup"><span data-stu-id="89b32-107">Use a comma (,) to separate list members and a closing parentheses ()) to terminate the list.</span></span>  
+-   <span data-ttu-id="a0f1c-107">쉼표(,)를 사용하여 목록 멤버를 구분하고, 닫는 괄호())를 사용하여 목록을 종료합니다.</span><span class="sxs-lookup"><span data-stu-id="a0f1c-107">Use a comma (,) to separate list members and a closing parentheses ()) to terminate the list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="89b32-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="89b32-108">See Also</span></span>  
- [<span data-ttu-id="89b32-109">Sub 프로시저</span><span class="sxs-lookup"><span data-stu-id="89b32-109">Sub Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)  
- [<span data-ttu-id="89b32-110">Function 프로시저</span><span class="sxs-lookup"><span data-stu-id="89b32-110">Function Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
+## <a name="see-also"></a><span data-ttu-id="a0f1c-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="a0f1c-108">See also</span></span>
+- [<span data-ttu-id="a0f1c-109">Sub 프로시저</span><span class="sxs-lookup"><span data-stu-id="a0f1c-109">Sub Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
+- [<span data-ttu-id="a0f1c-110">Function 프로시저</span><span class="sxs-lookup"><span data-stu-id="a0f1c-110">Function Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
