--- a/docs/visual-basic/misc/bc2034.md
+++ b/docs/visual-basic/misc/bc2034.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC2034
 ms.assetid: 8009553a-f6ba-4d2b-8ddd-8a9357bc928e
-ms.openlocfilehash: 45f5c74738dc69305e01ac85df95b68f98730b3c
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: c91c70bd9ff185bb644fa6cea26b78eb4a5cdf81
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33602043"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54528500"
 ---
 # <a name="option-win32manifest-ignored"></a>/win32manifest 옵션이 무시됩니다.
 /win32manifest 옵션이 무시됩니다. 이 옵션은 대상이 어셈블리일 때만 지정할 수 있습니다.  
@@ -25,7 +25,7 @@ ms.locfileid: "33602043"
   
 1.  `/win32manifest` 컴파일러 옵션을 제거하거나 `/target` 옵션을 `exe`, `winexe`또는 `library`로 설정합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [/target (Visual Basic)](../../visual-basic/reference/command-line-compiler/target.md)  
- [/win32manifest (Visual Basic)](../../visual-basic/reference/command-line-compiler/win32manifest.md)  
- [Visual Basic 명령줄 컴파일러](../../visual-basic/reference/command-line-compiler/index.md)
+## <a name="see-also"></a>참고자료
+- [/target (Visual Basic)](../../visual-basic/reference/command-line-compiler/target.md)
+- [/ win32manifest (Visual Basic)](../../visual-basic/reference/command-line-compiler/win32manifest.md)
+- [Visual Basic 명령줄 컴파일러](../../visual-basic/reference/command-line-compiler/index.md)
