--- a/docs/visual-basic/misc/bc30231.md
+++ b/docs/visual-basic/misc/bc30231.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30231
 ms.assetid: 16e6c3ea-ce89-4646-8c3f-0ef51324bc13
-ms.openlocfilehash: f6bca6ee24f80c73847cdbef8720bb86ece640b2
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 3c8562c839bcb34444cb50dd60482c73a298a7fb
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53776762"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54534136"
 ---
 # <a name="implements-not-valid-in-modules"></a>모듈에는 'Implements'를 사용할 수 없습니다.
 `Implements` 문 또는 절이 모듈 내에서 발생합니다. 모듈은 인터페이스를 구현할 수 없습니다.  
@@ -23,6 +23,6 @@ ms.locfileid: "53776762"
   
 -   `Implements` 문 또는 절을 제거하거나 모듈을 클래스로 다시 입력합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Implements 문](../../visual-basic/language-reference/statements/implements-statement.md)  
- [Module 문](../../visual-basic/language-reference/statements/module-statement.md)
+## <a name="see-also"></a>참고자료
+- [Implements 문](../../visual-basic/language-reference/statements/implements-statement.md)
+- [Module 문](../../visual-basic/language-reference/statements/module-statement.md)
