--- a/docs/visual-basic/misc/bc30798.md
+++ b/docs/visual-basic/misc/bc30798.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30798
 ms.assetid: bfa66627-516a-4955-977d-92372bcea090
-ms.openlocfilehash: 4ccc387064ebd3bdd565372ef1c515203711ef78
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 7c09218da21aaf7542e5f55579b584829bbd054c
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53770418"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54527421"
 ---
 # <a name="ltelementnamegt-for-the-imports-alias-to-ltqualifiedelementnamegt-does-not-refer-to-a-namespace-class-structure-interface-enum-or-module"></a>'&lt;elementname&gt;'에 대 한 Imports 별칭'에 대 한&lt;qualifiedelementname&gt;' Namespace, 클래스, 구조체, 인터페이스, 열거형 또는 모듈을 나타내지 않습니다
 [Imports 문 (.NET Namespace 및 형식)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md) 가져올 수 없는 프로그래밍 요소를 지정 합니다.  
@@ -31,5 +31,5 @@ ms.locfileid: "53770418"
   
 2.  한정하는 요소가 적합한 형식(네임스페이스, 클래스, 모듈, 구조체, 인터페이스 또는 열거형)인지 확인합니다. 적합한 형식이 아닌 경우 `Imports` 문을 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [참조 및 Imports 문](../../visual-basic/programming-guide/program-structure/references-and-the-imports-statement.md)
+## <a name="see-also"></a>참고자료
+- [참조 및 Imports 문](../../visual-basic/programming-guide/program-structure/references-and-the-imports-statement.md)
