--- a/docs/visual-basic/misc/bc31133.md
+++ b/docs/visual-basic/misc/bc31133.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31133
 ms.assetid: f6295626-dd63-408c-ab5f-76367f94d6ca
-ms.openlocfilehash: 4c5665114f9e870eaf8f4a26b9aa07fcfbbaef03
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: c8541bcbae99ff1d1964e1770c93d936af336f2f
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53772251"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54531173"
 ---
 # <a name="addhandler-and-removehandler-methods-must-have-exactly-one-parameter"></a>'AddHandler' 및 'RemoveHandler' 메서드에는 매개 변수를 하나만 사용해야 합니다.
 사용자 지정 이벤트 선언에 각 선언이 사용자 지정 이벤트 `AddHandler` 절에 의해 지정되는 대리자 형식의 단일 매개 변수를 사용하는 `RemoveHandler` 또는 `As` 선언이 있어야 합니다.  
@@ -28,8 +28,8 @@ ms.locfileid: "53772251"
   
  [!code-vb[VbVbalrEventError#1](../../visual-basic/language-reference/error-messages/codesnippet/VisualBasic/bc31133_1.vb)]  
   
-## <a name="see-also"></a>참고 항목  
- [Event 문](../../visual-basic/language-reference/statements/event-statement.md)  
- [AddHandler 문](~/docs/visual-basic/language-reference/statements/addhandler-statement.md)  
- [RemoveHandler 문](~/docs/visual-basic/language-reference/statements/removehandler-statement.md)  
- [이벤트](../../visual-basic/programming-guide/language-features/events/index.md)
+## <a name="see-also"></a>참고자료
+- [Event 문](../../visual-basic/language-reference/statements/event-statement.md)
+- [AddHandler 문](~/docs/visual-basic/language-reference/statements/addhandler-statement.md)
+- [RemoveHandler 문](~/docs/visual-basic/language-reference/statements/removehandler-statement.md)
+- [이벤트](../../visual-basic/programming-guide/language-features/events/index.md)
