--- a/docs/visual-basic/misc/bc33019.md
+++ b/docs/visual-basic/misc/bc33019.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC33019
 ms.assetid: 946266fe-a909-41b1-aad4-f85dc8050b88
-ms.openlocfilehash: 3bc9eab8532d355d1139776ac5c87a3169e25bb8
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 6b17d8802c5146c1afe2f22a97aacf0958b332af
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53758448"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54532697"
 ---
 # <a name="only-conversion-operators-can-be-declared-ltkeywordgt"></a>변환 연산자만 선언할 수 '&lt;키워드&gt;'
 연산자가 변환 연산자가 아닌 경우 [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) 에서 [Widening](../../visual-basic/language-reference/modifiers/widening.md) 또는 [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md) 를 지정합니다.  
@@ -27,9 +27,9 @@ ms.locfileid: "53758448"
   
 1.  연산자 정의에서 `Widening` 또는 `Narrowing` 키워드를 제거합니다. 형식 변환이 일어나지 않기 때문에 이들은 적용되지 않습니다.  
   
-## <a name="see-also"></a>참고 항목  
- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)  
- [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [방법: 변환 연산자를 정의 합니다.](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)  
- [Visual Basic의 형식 변환](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+## <a name="see-also"></a>참고자료
+- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)
+- [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [방법: 변환 연산자를 정의 합니다.](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [Visual Basic의 형식 변환](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
