--- a/docs/visual-basic/misc/bc36583.md
+++ b/docs/visual-basic/misc/bc36583.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36583
 ms.assetid: 662072fa-abb8-43c3-8ca2-aefb20f2e902
-ms.openlocfilehash: e197b8c2e1fd826cc6c96461199ecc35dc946c92
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 7f2fca38f77de9944e07c966390648c2c6ef154a
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53762447"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54529543"
 ---
 # <a name="parameter-ltparameternamegt-in-extension-method-ltmethodnamegt-defined-in-lttypenamegt-already-has-a-matching-omitted-argument"></a>매개 변수 '&lt;parametername&gt;'에서 확장명 메서드'&lt;methodname&gt;'에 정의 된'&lt;typename&gt;' 일치 하는 생략 된 인수가 이미 있습니다
 확장 메서드에 대한 프로시저 호출에서 위치로 인수를 생략하고 이름으로 해당 인수를 제공합니다. 예를 들어 확장 메서드 `ABC` 에 대한 다음 호출은 먼저 `Y`매개 변수에 대한 인수를 생략한 다음 이름으로 해당 인수를 제공합니다.  
@@ -35,6 +35,6 @@ Dim number As Integer
   
 -   위치로 인수를 제공하거나 인수를 생략하는 쉼표를 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [확장명 메서드](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)  
- [위치 및 이름으로 인수 전달](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+## <a name="see-also"></a>참고자료
+- [확장명 메서드](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
+- [위치 및 이름으로 인수 전달](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
