--- a/docs/visual-basic/misc/bc40005.md
+++ b/docs/visual-basic/misc/bc40005.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC40005
 ms.assetid: 1dadda7f-1d26-4ae8-a668-9f69d55ceb50
-ms.openlocfilehash: 126eac755a051274db61bdabfa848bbc246a9cae
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: d4c745a28b06c0b4268d0da5c1b961a88fb81760
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53764074"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54534295"
 ---
 # <a name="lttypegt-lttypenamegt-shadows-an-overridable-method-in-the-base-class"></a>&lt;형식&gt; '&lt;typename&gt;' 기본 클래스에 재정의 가능한 메서드를 숨깁니다.
 \<형식 > '\<typename >' 기본 클래스에 재정의 가능한 메서드를 섀도 처리 합니다. 기본 메서드를 재정의하려면 이 메서드를 'Overrides'로 선언해야 합니다.  
@@ -31,8 +31,8 @@ ms.locfileid: "53764074"
   
 -   재정의 또는 숨기기를 수행하려는 경우가 아니면 선언될 요소 이름을 변경합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [속성 및 파생된 클래스에서 메서드 재정의](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)  
- [Visual Basic의 숨김 기능](../../visual-basic/programming-guide/language-features/declared-elements/shadowing.md)  
- [재정의](../../visual-basic/language-reference/modifiers/overrides.md)  
- [Shadows](../../visual-basic/language-reference/modifiers/shadows.md)
+## <a name="see-also"></a>참고자료
+- [속성 및 파생된 클래스에서 메서드 재정의](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+- [Visual Basic의 숨김 기능](../../visual-basic/programming-guide/language-features/declared-elements/shadowing.md)
+- [재정의](../../visual-basic/language-reference/modifiers/overrides.md)
+- [Shadows](../../visual-basic/language-reference/modifiers/shadows.md)
