commit bilingual contents

--- a/docs/visual-basic/misc/bc31522.md
+++ b/docs/visual-basic/misc/bc31522.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31522
 ms.assetid: 9548cf98-8a13-4f09-b6b5-2f57273c1571
-ms.openlocfilehash: 8b763038794c2f063901269a87e72e97f801a207
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: f0af2797763baed5d7d4851ec954bea5125851d0
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53764867"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54577141"
 ---
-# <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-a-sub-function-or-operator-with-a-non-empty-body"></a><span data-ttu-id="58f70-102">'System.Runtime.InteropServices.DllImportAttribute'는 본문이 비어 있는 Sub, Function 또는 Operator에만 적용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="58f70-102">'System.Runtime.InteropServices.DllImportAttribute' cannot be applied to a Sub, Function, or Operator with a non-empty body</span></span>
-<span data-ttu-id="58f70-103">`DllImportAttribute` 특성이 비어 있는 `Sub`, `Function`또는 `Operator` 에 적용되었습니다.</span><span class="sxs-lookup"><span data-stu-id="58f70-103">The `DllImportAttribute` attribute was applied to a `Sub`, `Function`, or `Operator` that is not empty.</span></span>  
+# <a name="systemruntimeinteropservicesdllimportattribute-cannot-be-applied-to-a-sub-function-or-operator-with-a-non-empty-body"></a><span data-ttu-id="570f3-102">'System.Runtime.InteropServices.DllImportAttribute'는 본문이 비어 있는 Sub, Function 또는 Operator에만 적용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="570f3-102">'System.Runtime.InteropServices.DllImportAttribute' cannot be applied to a Sub, Function, or Operator with a non-empty body</span></span>
+<span data-ttu-id="570f3-103">`DllImportAttribute` 특성이 비어 있는 `Sub`, `Function`또는 `Operator` 에 적용되었습니다.</span><span class="sxs-lookup"><span data-stu-id="570f3-103">The `DllImportAttribute` attribute was applied to a `Sub`, `Function`, or `Operator` that is not empty.</span></span>  
   
- <span data-ttu-id="58f70-104">**오류 ID:** BC31522</span><span class="sxs-lookup"><span data-stu-id="58f70-104">**Error ID:** BC31522</span></span>  
+ <span data-ttu-id="570f3-104">**오류 ID:** BC31522</span><span class="sxs-lookup"><span data-stu-id="570f3-104">**Error ID:** BC31522</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="58f70-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="58f70-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="570f3-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="570f3-105">To correct this error</span></span>  
   
--   <span data-ttu-id="58f70-106">이 특성을 사용하려면 `Sub`, `Function`또는 `Operator` 에서 모든 코드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="58f70-106">Remove all code from the `Sub`, `Function`, or `Operator` to use this attribute.</span></span>  
+-   <span data-ttu-id="570f3-106">이 특성을 사용하려면 `Sub`, `Function`또는 `Operator` 에서 모든 코드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="570f3-106">Remove all code from the `Sub`, `Function`, or `Operator` to use this attribute.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="58f70-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="58f70-107">See Also</span></span>  
- <xref:System.Runtime.InteropServices.DllImportAttribute>  
- [<span data-ttu-id="58f70-108">Declare 문</span><span class="sxs-lookup"><span data-stu-id="58f70-108">Declare Statement</span></span>](../../visual-basic/language-reference/statements/declare-statement.md)
+## <a name="see-also"></a><span data-ttu-id="570f3-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="570f3-107">See also</span></span>
+- <xref:System.Runtime.InteropServices.DllImportAttribute>
+- [<span data-ttu-id="570f3-108">Declare 문</span><span class="sxs-lookup"><span data-stu-id="570f3-108">Declare Statement</span></span>](../../visual-basic/language-reference/statements/declare-statement.md)
