--- a/docs/visual-basic/misc/bc30130.md
+++ b/docs/visual-basic/misc/bc30130.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30130
 ms.assetid: 199e1629-a07f-413d-bda6-7ce91f81c85b
-ms.openlocfilehash: bd8a3afe14a69a96a5827202268e073c47b5bee8
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 3f3a4edebcf61045aa084d15c5b98f145876e109
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53782573"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54575978"
 ---
-# <a name="module-attribute-ltattributenamegt-is-not-valid-lterrorgt"></a><span data-ttu-id="d3be7-102">모듈 특성 '&lt;attributename&gt;' 올바르지 않습니다: &lt;오류&gt;</span><span class="sxs-lookup"><span data-stu-id="d3be7-102">Module attribute '&lt;attributename&gt;' is not valid: &lt;error&gt;</span></span>
-<span data-ttu-id="d3be7-103">공용 언어 런타임은 모듈에 대한 특성을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="d3be7-103">The common language runtime does not accept the attribute on a module.</span></span>
+# <a name="module-attribute-ltattributenamegt-is-not-valid-lterrorgt"></a><span data-ttu-id="2a655-102">모듈 특성 '&lt;attributename&gt;' 올바르지 않습니다: &lt;오류&gt;</span><span class="sxs-lookup"><span data-stu-id="2a655-102">Module attribute '&lt;attributename&gt;' is not valid: &lt;error&gt;</span></span>
+<span data-ttu-id="2a655-103">공용 언어 런타임은 모듈에 대한 특성을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="2a655-103">The common language runtime does not accept the attribute on a module.</span></span>
 
-<span data-ttu-id="d3be7-104">**오류 ID:** BC30130</span><span class="sxs-lookup"><span data-stu-id="d3be7-104">**Error ID:** BC30130</span></span>
+<span data-ttu-id="2a655-104">**오류 ID:** BC30130</span><span class="sxs-lookup"><span data-stu-id="2a655-104">**Error ID:** BC30130</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="d3be7-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d3be7-105">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="2a655-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="2a655-105">To correct this error</span></span>
 
-1. <span data-ttu-id="d3be7-106">선언에서 특성을 제거하거나 상황에 맞는 유효한 특성으로 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="d3be7-106">Remove the attribute from the declaration or replace it with an attribute that is valid for the context.</span></span>
+1. <span data-ttu-id="2a655-106">선언에서 특성을 제거하거나 상황에 맞는 유효한 특성으로 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="2a655-106">Remove the attribute from the declaration or replace it with an attribute that is valid for the context.</span></span>
 
-2. <span data-ttu-id="d3be7-107">따옴표 붙은 오류 메시지를 검사하고 적절한 조치를 수행합니다.</span><span class="sxs-lookup"><span data-stu-id="d3be7-107">Examine the quoted error message and take appropriate action.</span></span>
+2. <span data-ttu-id="2a655-107">따옴표 붙은 오류 메시지를 검사하고 적절한 조치를 수행합니다.</span><span class="sxs-lookup"><span data-stu-id="2a655-107">Examine the quoted error message and take appropriate action.</span></span>
 
-## <a name="see-also"></a><span data-ttu-id="d3be7-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="d3be7-108">See also</span></span>
- [<span data-ttu-id="d3be7-109">특성 개요</span><span class="sxs-lookup"><span data-stu-id="d3be7-109">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)  
- <xref:System.AttributeUsageAttribute?displayProperty=nameWithType>
+## <a name="see-also"></a><span data-ttu-id="2a655-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="2a655-108">See also</span></span>
+- [<span data-ttu-id="2a655-109">특성 개요</span><span class="sxs-lookup"><span data-stu-id="2a655-109">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
+- <xref:System.AttributeUsageAttribute?displayProperty=nameWithType>
