--- a/docs/visual-basic/misc/bc31060.md
+++ b/docs/visual-basic/misc/bc31060.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31060
 ms.assetid: 33d3ca8b-711b-4f76-9b79-d5428b28dd2f
-ms.openlocfilehash: 903f77f3c581a0b70e9729e51bbe29abf1b540b5
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: e477d21efa0f8772a50123c4891c7425edfe77e9
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53777009"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54572528"
 ---
-# <a name="ltpropertynamegt-implicitly-defines-ltmembernamegt-which-conflicts-with-a-member-of-the-same-name-in-lttypegt-lttypenamegt"></a><span data-ttu-id="c89ed-102">'&lt;propertyname&gt;'를 암시적으로 정의'&lt;membername&gt;'에 있는 동일한 이름의 멤버와 충돌 하는 &lt;형식&gt; '&lt;typename&gt;'</span><span class="sxs-lookup"><span data-stu-id="c89ed-102">'&lt;propertyname&gt;' implicitly defines '&lt;membername&gt;', which conflicts with a member of the same name in &lt;type&gt; '&lt;typename&gt;'</span></span>
-<span data-ttu-id="c89ed-103">형식 멤버의 이름이 속성에 대해 암시적으로 만든 멤버 이름과 충돌합니다.</span><span class="sxs-lookup"><span data-stu-id="c89ed-103">The name of a type member conflicts with the name of a member implicitly created for a property.</span></span> <span data-ttu-id="c89ed-104">속성은 정의된 멤버와 충돌할 수 있는 여러 암시적 변수를 암시적으로 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="c89ed-104">Properties implicitly create several implicit variables that can conflict with defined members.</span></span>  
+# <a name="ltpropertynamegt-implicitly-defines-ltmembernamegt-which-conflicts-with-a-member-of-the-same-name-in-lttypegt-lttypenamegt"></a><span data-ttu-id="d8045-102">'&lt;propertyname&gt;'를 암시적으로 정의'&lt;membername&gt;'에 있는 동일한 이름의 멤버와 충돌 하는 &lt;형식&gt; '&lt;typename&gt;'</span><span class="sxs-lookup"><span data-stu-id="d8045-102">'&lt;propertyname&gt;' implicitly defines '&lt;membername&gt;', which conflicts with a member of the same name in &lt;type&gt; '&lt;typename&gt;'</span></span>
+<span data-ttu-id="d8045-103">형식 멤버의 이름이 속성에 대해 암시적으로 만든 멤버 이름과 충돌합니다.</span><span class="sxs-lookup"><span data-stu-id="d8045-103">The name of a type member conflicts with the name of a member implicitly created for a property.</span></span> <span data-ttu-id="d8045-104">속성은 정의된 멤버와 충돌할 수 있는 여러 암시적 변수를 암시적으로 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="d8045-104">Properties implicitly create several implicit variables that can conflict with defined members.</span></span>  
   
- <span data-ttu-id="c89ed-105">**오류 ID:** BC31060</span><span class="sxs-lookup"><span data-stu-id="c89ed-105">**Error ID:** BC31060</span></span>  
+ <span data-ttu-id="d8045-105">**오류 ID:** BC31060</span><span class="sxs-lookup"><span data-stu-id="d8045-105">**Error ID:** BC31060</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c89ed-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="c89ed-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d8045-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d8045-106">To correct this error</span></span>  
   
--   <span data-ttu-id="c89ed-107">이름 충돌을 제거하려면 명시적으로 선언된 멤버 이름을 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="c89ed-107">Rename the explicitly declared member to remove the naming conflict.</span></span>  
+-   <span data-ttu-id="d8045-107">이름 충돌을 제거하려면 명시적으로 선언된 멤버 이름을 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="d8045-107">Rename the explicitly declared member to remove the naming conflict.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c89ed-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="c89ed-108">See Also</span></span>  
-   
- [<span data-ttu-id="c89ed-109">속성 프로시저</span><span class="sxs-lookup"><span data-stu-id="c89ed-109">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)  
- 
+## <a name="see-also"></a><span data-ttu-id="d8045-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="d8045-108">See also</span></span>
+
+- [<span data-ttu-id="d8045-109">속성 프로시저</span><span class="sxs-lookup"><span data-stu-id="d8045-109">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+
