commit translated contents

--- a/docs/visual-basic/misc/bc33008.md
+++ b/docs/visual-basic/misc/bc33008.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC33008
 ms.assetid: 8c44456b-8fd2-4168-ad8c-b6da129242ba
-ms.openlocfilehash: 87ca560683d5454b30a25bcec4812f9749879743
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 8ab5067a3b08e7d450453e9d5adc3fa592ad6f03
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53779921"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54639993"
 ---
 # <a name="exit-operator-is-not-valid-use-return-to-exit-an-operator"></a>'Exit Operator'가 잘못되었습니다. 연산자를 종료하려면 'Return'을 사용하세요.
 `Exit Operator` 문이 `Operator` 프로시저에 나타납니다.  
@@ -25,8 +25,8 @@ ms.locfileid: "53779921"
   
 -   `Exit Operator` 문을 `Return` 문으로 바꿉니다.  
   
-## <a name="see-also"></a>참고 항목  
- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)  
- [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [방법: 변환 연산자를 정의 합니다.](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+## <a name="see-also"></a>참고자료
+- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)
+- [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [방법: 변환 연산자를 정의 합니다.](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
