--- a/docs/visual-basic/misc/bc30593.md
+++ b/docs/visual-basic/misc/bc30593.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30593
 ms.assetid: 2500b776-7fa4-4272-8cc7-204593706651
-ms.openlocfilehash: 289838d7cfe61ad4fedd7d32f09fd7e6045debad
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: e5b6938b48b660e3cbe6c1c06a3a282200bf29e8
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53772212"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54639499"
 ---
 # <a name="variables-in-modules-cannot-be-declared-ltspecifiergt"></a>모듈의 변수를 선언할 수 없습니다. '&lt;지정자&gt;'
 `MustInherit`문의 변수에 `Module` 와 같은 지정자를 사용했습니다. 모듈은 인스턴스화될 수 없고 상속을 지원하지 않으며 인터페이스를 구현할 수 없습니다.  
@@ -23,5 +23,5 @@ ms.locfileid: "53772212"
   
 -   지정자를 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Module 문](../../visual-basic/language-reference/statements/module-statement.md)
+## <a name="see-also"></a>참고자료
+- [Module 문](../../visual-basic/language-reference/statements/module-statement.md)
