--- a/docs/visual-basic/misc/bc30625.md
+++ b/docs/visual-basic/misc/bc30625.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30625
 ms.assetid: d51d5f1c-16f5-401c-be3a-0470eb9bb812
-ms.openlocfilehash: d5f3d5c691fe4e8ecfddcad4c89677a697a6c883
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: deb5eab0736b82e7aa945ea0ef2fcc7ac8dec716
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53778621"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54607227"
 ---
 # <a name="module-statement-must-end-with-a-matching-end-module"></a>'Module' 문은 짝이 되는 'End Module'로 끝나야 합니다.
 모듈 블록은 `End Module` 문으로 끝나야 합니다.  
@@ -23,5 +23,5 @@ ms.locfileid: "53778621"
   
 -   `End Module` 블록 끝에 `Module` 문을 추가합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [최종 \<키워드 > 문](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+## <a name="see-also"></a>참고자료
+- [최종 \<키워드 > 문](../../visual-basic/language-reference/statements/end-keyword-statement.md)
