--- a/docs/visual-basic/misc/bc32111.md
+++ b/docs/visual-basic/misc/bc32111.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32111
 ms.assetid: b03b5840-5318-4844-b2da-1bca4c28d097
-ms.openlocfilehash: d545160148938dade07adda19cb9fe917f7df4a3
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 5acedc24d98fb4d8fc9b8a10e1d060d9f8dfd49d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53761508"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54638316"
 ---
 # <a name="indirect-constraint-ltconstraint1gt-obtained-from-the-type-parameter-constraint-lttypeparameter1gt-conflicts-with-the-constraint-ltconstraint2gt"></a>간접 제약 조건 '&lt;constraint1&gt;'형식 매개 변수 제약 조건에서 가져온'&lt;typeparameter1&gt;'제약 조건과 충돌'&lt;constraint2&gt;'
 제네릭 형식이 직접 및 간접 제약 조건의 조합으로 인해 충돌하는 제약 조건으로 선언되었습니다.  
@@ -29,10 +29,10 @@ ms.locfileid: "53761508"
   
 -   제약 조건의 충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.  
   
-## <a name="see-also"></a>참고 항목
+## <a name="see-also"></a>참고자료
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
-- [형식 목록](../../visual-basic/language-reference/statements/type-list.md)  
-- [구조체(Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md)  
-- [클래스 (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md)  
+- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [형식 목록](../../visual-basic/language-reference/statements/type-list.md)
+- [구조체(Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md)
+- [클래스 (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md)
 - [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
