--- a/docs/visual-basic/misc/bc42314.md
+++ b/docs/visual-basic/misc/bc42314.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC42314
 ms.assetid: 23c76238-843a-44fe-88b7-25e604ee924b
-ms.openlocfilehash: e58f2440427b25f5ee82bcdb891fc788ddd541f6
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: ff92877c79657497ebc3cfd266ab00275b932de7
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43523709"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54637075"
 ---
 # <a name="xml-comment-cannot-be-applied-more-than-once-on-a-partial-lttypegt"></a>부분에 XML 주석을 두 번 이상 적용할 수 없습니다 &lt;형식&gt;
 부분에 XML 주석을 두 번 이상 적용할 수 없습니다 \<형식 >. 이 대 한 XML 주석을 \<유형 > 무시 됩니다.  
@@ -27,6 +27,6 @@ ms.locfileid: "43523709"
   
 -   불필요한 주석 블록을 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [방법: XML 문서 만들기](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)  
- [XML 주석 태그](../../visual-basic/language-reference/xmldoc/index.md)
+## <a name="see-also"></a>참고자료
+- [방법: XML 문서 만들기](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)
+- [XML 주석 태그](../../visual-basic/language-reference/xmldoc/index.md)
